--- a/r-caret-feedstock/recipe/meta.yaml
+++ b/r-caret-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '6.0-78' %}
+{% set version = '6.0-80' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,40 +8,35 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: caret_6.0-78.tar.gz  # [linux or win32]
+  fn: caret_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/caret_6.0-78.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/caret/caret_6.0-78.tar.gz  # [linux or win32]
-  sha256: dea8799853b9b0843d994b4dad09d1535547f36752ff70a956004111e3ef3640  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/caret_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/caret/caret_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 0705874a30bd5960a51616338534255734e792a4af3f28368e1040f7bf820d76  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/caret_6.0-80.zip  # [win64]
+  sha256: c2f33114ca7d2f176807ddbebbdd17b58299f47e1fcebaa05a6d5366e58def1c  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/caret_6.0-78.zip  # [win64]
-  sha256: 06a890379ae5bdfba1e2c9349e5faa55f9bc564dc0229ddc42ae4d0158475b58  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/caret_6.0-78.tgz  # [osx]
-  sha256: fcad7c59776de1435a3d13200b13345e634c5411ce55785211907f8bf64ef146  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/caret_6.0-80.tgz  # [osx]
+  sha256: 14186913e436b4d329c6381d17709e247a0a768a3ac8fa93dfac2f4a4b4e0b31  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: BradleyTerry2, e1071, earth (>= 2.2-3), fastICA, gam, ipred, kernlab, klaR, MASS, ellipse, mda, mgcv, mlbench, MLmetrics, nnet, party (>= 0.9-99992), pls, pROC, proxy, randomForest, RANN, spls, subselect, pamr, superpc, Cubist, testthat (>= 0.9.1)
+# Suggests: BradleyTerry2, e1071, earth (>= 2.2-3), fastICA, gam (>= 1.15), ipred, kernlab, knitr, klaR, MASS, ellipse, mda, mgcv, mlbench, MLmetrics, nnet, party (>= 0.9-99992), pls, pROC, proxy, randomForest, RANN, spls, subselect, pamr, superpc, Cubist, testthat (>= 0.9.1), rpart, dplyr
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -57,7 +52,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-modelmetrics >=1.1.0
     - r-foreach
     - r-ggplot2
@@ -93,7 +88,7 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: caret
-# Version: 6.0-78
+# Version: 6.0-80
 # Title: Classification and Regression Training
 # Author: Max Kuhn. Contributions from Jed Wing, Steve Weston, Andre Williams, Chris Keefer, Allan Engelhardt, Tony Cooper, Zachary Mayer, Brenton Kenkel, the R Core Team, Michael Benesty, Reynald Lescarbeau, Andrew Ziem, Luca Scrucca, Yuan Tang, Can Candan, and Tyler Hunt.
 # Description: Misc functions for training and plotting classification and regression models.
@@ -102,13 +97,14 @@ extra:
 # URL: https://github.com/topepo/caret/
 # BugReports: https://github.com/topepo/caret/issues
 # Imports: foreach, methods, plyr, ModelMetrics (>= 1.1.0), nlme, reshape2, stats, stats4, utils, grDevices, recipes (>= 0.0.1), withr (>= 2.0.0)
-# Suggests: BradleyTerry2, e1071, earth (>= 2.2-3), fastICA, gam, ipred, kernlab, klaR, MASS, ellipse, mda, mgcv, mlbench, MLmetrics, nnet, party (>= 0.9-99992), pls, pROC, proxy, randomForest, RANN, spls, subselect, pamr, superpc, Cubist, testthat (>= 0.9.1)
+# Suggests: BradleyTerry2, e1071, earth (>= 2.2-3), fastICA, gam (>= 1.15), ipred, kernlab, knitr, klaR, MASS, ellipse, mda, mgcv, mlbench, MLmetrics, nnet, party (>= 0.9-99992), pls, pROC, proxy, randomForest, RANN, spls, subselect, pamr, superpc, Cubist, testthat (>= 0.9.1), rpart, dplyr
 # License: GPL (>= 2)
 # RoxygenNote: 6.0.1
+# VignetteBuilder: knitr
 # NeedsCompilation: yes
-# Packaged: 2017-11-28 20:04:04 UTC; max
+# Packaged: 2018-05-26 15:05:02 UTC; max
 # Repository: CRAN
-# Date/Publication: 2017-12-10 20:28:28 UTC
+# Date/Publication: 2018-05-26 22:01:28 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
