--- a/r-callr-feedstock/recipe/meta.yaml
+++ b/r-callr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.0.0' %}
+{% set version = '2.0.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,42 +8,41 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: callr_1.0.0.tar.gz  # [linux or win32]
+  fn: callr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/callr_1.0.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/callr/callr_1.0.0.tar.gz  # [linux or win32]
-  sha256: 2c56808c723aba2ea8a8b6bbdc9b8332c96f59b119079861dd52f5988c27f715  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/callr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/callr/callr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 0e3fa4e047f61f4e29ab2dee8f585861fb77a5f5ad6c81f125e98b6130c6a380  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/callr_2.0.4.zip  # [win64]
+  sha256: b6f52f08292caf6d4ff6a296d842ae048f67e91c3017e1874698ff4658775580  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/callr_1.0.0.zip  # [win64]
-  sha256: f3b6b517501a8760f51baa7b06bce47fa59c3ec148ffac1e279070654a90f605  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/callr_1.0.0.tgz  # [osx]
-  sha256: 072cab2554372fdaeade153be7048777fa6c86b47a80209254fa15fa35e8daff  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/callr_2.0.4.tgz  # [osx]
+  sha256: 4e3d4d2de5707317d5938565a753f5433dd5e9ca8ef09c2f27f8f7d13a51f0a0  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: covr, testthat
+# Suggests: covr, testthat, withr
 requirements:
   build:
 
   host:
     - mro-base
+    - r-r6
+    - r-processx >=3.1.0
 
   run:
     - mro-base
+    - r-r6
+    - r-processx >=3.1.0
 
 test:
   commands:
@@ -58,7 +57,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/MangoTheCat/callr
+  home: https://github.com/r-lib/callr#readme
   license: MIT + file LICENSE
   summary: It is sometimes useful to perform a computation in a separate R process, without affecting
     the current R process at all. This packages does exactly that.
@@ -72,21 +71,23 @@ extra:
 
 # Package: callr
 # Title: Call R from R
-# Version: 1.0.0
-# Author: Gabor Csardi
-# Maintainer: Gabor Csardi <gcsardi@mango-solutions.com>
+# Version: 2.0.4
+# Authors@R: c( person("Gabor", "Csardi", role = c("aut", "cre", "cph"), email = "csardi.gabor@gmail.com", comment = c(ORCID = "0000-0001-7098-9676")), person("Winston", "Chang", role = "aut"), person("RStudio", role = c("cph", "fnd")), person("Mango Solutions", role  = c("cph", "fnd")))
 # Description: It is sometimes useful to perform a computation in a separate R process, without affecting the current R process at all. This packages does exactly that.
 # License: MIT + file LICENSE
 # LazyData: true
-# URL: https://github.com/MangoTheCat/callr
-# BugReports: https://github.com/MangoTheCat/callr/issues
-# RoxygenNote: 5.0.1.9000
-# Suggests: covr, testthat
+# URL: https://github.com/r-lib/callr#readme
+# BugReports: https://github.com/r-lib/callr/issues
+# RoxygenNote: 6.0.1.9000
+# Imports: processx (>= 3.1.0), R6, utils
+# Suggests: covr, testthat, withr
 # Encoding: UTF-8
 # NeedsCompilation: no
-# Packaged: 2016-06-17 21:09:31 UTC; gaborcsardi
+# Packaged: 2018-05-15 15:56:01 UTC; gaborcsardi
+# Author: Gabor Csardi [aut, cre, cph] (<https://orcid.org/0000-0001-7098-9676>), Winston Chang [aut], RStudio [cph, fnd], Mango Solutions [cph, fnd]
+# Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2016-06-18 15:24:15
+# Date/Publication: 2018-05-15 16:36:39 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
