--- a/r-ddalpha-feedstock/recipe/meta.yaml
+++ b/r-ddalpha-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.3.1' %}
+{% set version = '1.3.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,42 +8,36 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: ddalpha_1.3.1.tar.gz  # [linux or win32]
+  fn: ddalpha_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/ddalpha_1.3.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/ddalpha/ddalpha_1.3.1.tar.gz  # [linux or win32]
-  sha256: 707d72464c37726f4a067417d6a8927a232b59cf67fa77aa48eef8414ae29f5d  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/ddalpha_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/ddalpha/ddalpha_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 33bfb9098787ad622c64d7905d05155c2a4f63d60646407001d53ff133c4913c  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/ddalpha_1.3.3.zip  # [win64]
+  sha256: e0ca044b688f7cf3eb6ebafb905f7a2e609bbf9af024d7d9f6e47e3b08bec06c  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/ddalpha_1.3.1.zip  # [win64]
-  sha256: 83e1b3bdd57cfb84c9fb2d5855857582767785e635e8f2a55d5bf134bd845a99  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/ddalpha_1.3.1.tgz  # [osx]
-  sha256: 707243b96e7b73c5440d3b02df2ddb0ab1c4d18f3097b2fdf49d2140e7eaf9f3  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/ddalpha_1.3.3.tgz  # [osx]
+  sha256: 2fd07cca63925fd338ad3f7caed5b83838ca69413aabaca7eb7fe9250e32a157  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{ compiler('fortran') }}    # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{ compiler('fortran') }}  # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -51,16 +45,18 @@ requirements:
     - r-mass
     - r-rcpp >=0.11.0
     - r-class
+    - r-geometry
     - r-robustbase
     - r-sfsmisc
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-bh
     - r-mass
     - r-rcpp >=0.11.0
     - r-class
+    - r-geometry
     - r-robustbase
     - r-sfsmisc
 
@@ -80,8 +76,8 @@ about:
   home: https://CRAN.R-project.org/package=ddalpha
   license: GPL-2
   summary: Contains procedures for depth-based supervised learning, which are entirely non-parametric,
-    in particular the DDalpha-procedure (Lange, Mosler and Mozharovskyi, 2014). The
-    training data sample is transformed by a statistical depth function to a compact
+    in particular the DDalpha-procedure (Lange, Mosler and Mozharovskyi, 2014 <doi:10.1007/s00362-012-0488-4>).
+    The training data sample is transformed by a statistical depth function to a compact
     low-dimensional space, where the final classification is done. It also offers an
     extension to functional data and routines for calculating certain notions of statistical
     depth functions. 50 multivariate and 5 functional classification problems are included.
@@ -96,21 +92,21 @@ extra:
 # Package: ddalpha
 # Type: Package
 # Title: Depth-Based Classification and Calculation of Data Depth
-# Version: 1.3.1
-# Date: 2017-09-27
+# Version: 1.3.3
+# Date: 2018-04-30
 # Authors@R: c(person("Oleksii", "Pokotylo", role=c("aut", "cre"), email = "alexey.pokotylo@gmail.com"), person("Pavlo", "Mozharovskyi", role=c("aut"), email = "pavlo.mozharovskyi@ensai.fr"), person("Rainer", "Dyckerhoff", role=c("aut"), email = "rainer.dyckerhoff@statistik.uni-koeln.de"), person("Stanislav", "Nagy", role=c("aut"), email = "nagy@karlin.mff.cuni.cz"))
 # SystemRequirements: C++11
-# Depends: stats, utils, graphics, grDevices, MASS, class, robustbase, sfsmisc
+# Depends: R (>= 2.10), stats, utils, graphics, grDevices, MASS, class, robustbase, sfsmisc, geometry
 # Imports: Rcpp (>= 0.11.0)
 # LinkingTo: BH, Rcpp
-# Description: Contains procedures for depth-based supervised learning, which are entirely non-parametric, in particular the DDalpha-procedure (Lange, Mosler and Mozharovskyi, 2014). The training data sample is transformed by a statistical depth function to a compact low-dimensional space, where the final classification is done. It also offers an extension to functional data and routines for calculating certain notions of statistical depth functions. 50 multivariate and 5 functional classification problems are included.
+# Description: Contains procedures for depth-based supervised learning, which are entirely non-parametric, in particular the DDalpha-procedure (Lange, Mosler and Mozharovskyi, 2014 <doi:10.1007/s00362-012-0488-4>). The training data sample is transformed by a statistical depth function to a compact low-dimensional space, where the final classification is done. It also offers an extension to functional data and routines for calculating certain notions of statistical depth functions. 50 multivariate and 5 functional classification problems are included.
 # License: GPL-2
 # NeedsCompilation: yes
-# Packaged: 2017-09-27 18:51:34 UTC; User
+# Packaged: 2018-04-30 14:35:40 UTC; oleksii.pokotylo
 # Author: Oleksii Pokotylo [aut, cre], Pavlo Mozharovskyi [aut], Rainer Dyckerhoff [aut], Stanislav Nagy [aut]
 # Maintainer: Oleksii Pokotylo <alexey.pokotylo@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-09-27 20:30:35 UTC
+# Date/Publication: 2018-04-30 20:58:04 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
