--- a/r-dplyr-feedstock/recipe/meta.yaml
+++ b/r-dplyr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.7.4' %}
+{% set version = '0.7.5' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,70 +8,67 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: dplyr_0.7.4.tar.gz  # [linux or win32]
+  fn: dplyr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/dplyr_0.7.4.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/dplyr/dplyr_0.7.4.tar.gz  # [linux or win32]
-  sha256: 7b1fc90750fbb46483423da6721832c545d37b157f4f3355784a65e50fada8c2  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/dplyr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/dplyr/dplyr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 2fbd8f316a59670076d43a0fe854654621941ee5f621ea5f0185a3f5daafda50  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/dplyr_0.7.5.zip  # [win64]
+  sha256: 80c26180a9305206ede960ef1fd88f7dec138807e052793618a0490c340ed6dc  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/dplyr_0.7.4.zip  # [win64]
-  sha256: 4511f5107a2041281c01d89e3f54df395c0e0867a4182ba1bba4dfce37ee51a0  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/dplyr_0.7.4.tgz  # [osx]
-  sha256: c0ab267b4c711d58274875086d7830da69f2420b3e291db4e4032b230f918264  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/dplyr_0.7.5.tgz  # [osx]
+  sha256: 0f67c92cc1907a37b42973558792a4c9cc3e5f852ec477e819f4b86212f3ea25  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: bit64, covr, dbplyr, dtplyr, DBI, ggplot2, hms, knitr, Lahman (>= 3.0-1), mgcv, microbenchmark, nycflights13, rmarkdown, RMySQL, RPostgreSQL, RSQLite, testthat, withr
+# Suggests: bit64 (>= 0.9.7), callr, covr (>= 3.0.1), DBI (>= 0.7.14), dbplyr (>= 1.2.0), dtplyr (>= 0.0.2), ggplot2 (>= 2.2.1), hms (>= 0.4.1), knitr (>= 1.19), Lahman (>= 3.0-1), lubridate, mgcv (>= 1.8.23), microbenchmark (>= 1.4.4), nycflights13 (>= 0.2.2), rmarkdown (>= 1.8), RMySQL (>= 0.10.13), RPostgreSQL (>= 0.6.2), RSQLite (>= 2.0), testthat (>= 2.0.0), withr (>= 2.1.1)
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
     - r-bh >=1.58.0_1
-    - r-r6
-    - r-rcpp >=0.12.7
-    - r-assertthat
-    - r-bindrcpp >=0.2
+    - r-r6 >=2.2.2
+    - r-rcpp >=0.12.15
+    - r-assertthat >=0.2.0
+    - r-bindrcpp >=0.2.0.9000
     - r-glue >=1.1.1
-    - r-magrittr
-    - r-pkgconfig
-    - r-plogr
-    - r-rlang >=0.1.2
+    - r-magrittr >=1.5
+    - r-pkgconfig >=2.0.1
+    - r-plogr >=0.1.10
+    - r-rlang >=0.2.0
     - r-tibble >=1.3.1
+    - r-tidyselect >=0.2.3
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-bh >=1.58.0_1
-    - r-r6
-    - r-rcpp >=0.12.7
-    - r-assertthat
-    - r-bindrcpp >=0.2
+    - r-r6 >=2.2.2
+    - r-rcpp >=0.12.15
+    - r-assertthat >=0.2.0
+    - r-bindrcpp >=0.2.0.9000
     - r-glue >=1.1.1
-    - r-magrittr
-    - r-pkgconfig
-    - r-plogr
-    - r-rlang >=0.1.2
+    - r-magrittr >=1.5
+    - r-pkgconfig >=2.0.1
+    - r-plogr >=0.1.10
+    - r-rlang >=0.2.0
     - r-tibble >=1.3.1
+    - r-tidyselect >=0.2.3
 
 test:
   commands:
@@ -100,27 +97,27 @@ extra:
 
 # Type: Package
 # Package: dplyr
-# Version: 0.7.4
 # Title: A Grammar of Data Manipulation
+# Version: 0.7.5
+# Authors@R: c( person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre"), comment = c(ORCID = "0000-0003-4757-117X")), person("Romain", "Fran\u00e7ois", role = "aut", comment = c(ORCID = "0000-0002-2444-4226")), person("Lionel", "Henry", role = "aut"), person("Kirill", "M\u00fcller", role = "aut", comment = c(ORCID = "0000-0002-1416-3412")), person("RStudio", role = c("cph", "fnd")) )
 # Description: A fast, consistent tool for working with data frame like objects, both in memory and out of memory.
-# Authors@R: c( person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre")), person("Romain", "Francois", , "romain@r-enthusiasts.com", role = "aut"), person("Lionel", "Henry", role = "aut"), person("Kirill", "Muller", role = "aut"), person("RStudio", role = c("cph", "fnd")) )
+# License: MIT + file LICENSE
 # URL: http://dplyr.tidyverse.org, https://github.com/tidyverse/dplyr
 # BugReports: https://github.com/tidyverse/dplyr/issues
-# Encoding: UTF-8
 # Depends: R (>= 3.1.2)
-# Imports: assertthat, bindrcpp (>= 0.2), glue (>= 1.1.1), magrittr, methods, pkgconfig, rlang (>= 0.1.2), R6, Rcpp (>= 0.12.7), tibble (>= 1.3.1), utils
-# Suggests: bit64, covr, dbplyr, dtplyr, DBI, ggplot2, hms, knitr, Lahman (>= 3.0-1), mgcv, microbenchmark, nycflights13, rmarkdown, RMySQL, RPostgreSQL, RSQLite, testthat, withr
+# Imports: assertthat (>= 0.2.0), bindrcpp (>= 0.2.0.9000), glue (>= 1.1.1), magrittr (>= 1.5), methods, pkgconfig (>= 2.0.1), R6 (>= 2.2.2), Rcpp (>= 0.12.15), rlang (>= 0.2.0), tibble (>= 1.3.1), tidyselect (>= 0.2.3), utils
+# Suggests: bit64 (>= 0.9.7), callr, covr (>= 3.0.1), DBI (>= 0.7.14), dbplyr (>= 1.2.0), dtplyr (>= 0.0.2), ggplot2 (>= 2.2.1), hms (>= 0.4.1), knitr (>= 1.19), Lahman (>= 3.0-1), lubridate, mgcv (>= 1.8.23), microbenchmark (>= 1.4.4), nycflights13 (>= 0.2.2), rmarkdown (>= 1.8), RMySQL (>= 0.10.13), RPostgreSQL (>= 0.6.2), RSQLite (>= 2.0), testthat (>= 2.0.0), withr (>= 2.1.1)
+# LinkingTo: BH (>= 1.58.0-1), bindrcpp (>= 0.2.0.9000), plogr (>= 0.1.10), Rcpp (>= 0.12.15)
 # VignetteBuilder: knitr
-# LinkingTo: Rcpp (>= 0.12.0), BH (>= 1.58.0-1), bindrcpp, plogr
+# Encoding: UTF-8
 # LazyData: yes
-# License: MIT + file LICENSE
-# RoxygenNote: 6.0.1
+# RoxygenNote: 6.0.1.9000
 # NeedsCompilation: yes
-# Packaged: 2017-09-16 15:25:52 UTC; muelleki
-# Author: Hadley Wickham [aut, cre], Romain Francois [aut], Lionel Henry [aut], Kirill Muller [aut], RStudio [cph, fnd]
+# Packaged: 2018-05-09 07:53:55 UTC; kirill
+# Author: Hadley Wickham [aut, cre] (<https://orcid.org/0000-0003-4757-117X>), Romain Francois [aut] (<https://orcid.org/0000-0002-2444-4226>), Lionel Henry [aut], Kirill Muller [aut] (<https://orcid.org/0000-0002-1416-3412>), RStudio [cph, fnd]
 # Maintainer: Hadley Wickham <hadley@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-09-28 20:43:29 UTC
+# Date/Publication: 2018-05-19 09:06:10
 
 # See
 # http://docs.continuum.io/conda/build.html for
