--- a/r-httpuv-feedstock/recipe/meta.yaml
+++ b/r-httpuv-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.3.5' %}
+{% set version = '1.4.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,50 +8,57 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: httpuv_1.3.5.tar.gz  # [linux or win32]
+  fn: httpuv_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/httpuv_1.3.5.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/httpuv/httpuv_1.3.5.tar.gz  # [linux or win32]
-  sha256: 4336b993afccca2a194aca577b1975b89a35ac863423b18a11cdbb3f8470e4e9  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/httpuv_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/httpuv/httpuv_{{ version }}.tar.gz  # [linux or win32]
+  sha256: c6e91ac3396a102deabd9a63b5a786f1ae1f87b5ee1ce0f1501fc0f43cebf095  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/httpuv_1.4.3.zip  # [win64]
+  sha256: e1d4ef456382f95f8fd094b8d97e77358136493574a245fa875731717d3dff42  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/httpuv_1.3.5.zip  # [win64]
-  sha256: cd20a23e5f32d0547470becb379574da75f136721d6b54bc7c82d135af1d3bf7  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/httpuv_1.3.5.tgz  # [osx]
-  sha256: e091d437bdd9a95398f53279c0b60eded4b0d42a141af427865b49d46ddb8e31  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/httpuv_1.4.3.tgz  # [osx]
+  sha256: 42351d9f2921abbfa7952368e60089f54db161cdd775f17650a0007e500058c3  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-
+# Suggests: testthat, callr
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}sed               # [win32]
+    - {{posix}}grep              # [win32]
+    - {{posix}}autoconf          # [linux or win32]
+    - {{posix}}automake-wrapper  # [win32]
+    - {{posix}}automake          # [win32]
+    - {{posix}}pkg-config
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
+    - r-bh
     - r-rcpp >=0.11.0
+    - r-later >=0.7.2
+    - r-promises
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
+    - r-bh
     - r-rcpp >=0.11.0
+    - r-later >=0.7.2
+    - r-promises
 
 test:
   commands:
@@ -67,7 +74,7 @@ test:
 
 about:
   home: https://github.com/rstudio/httpuv
-  license: GPL-3 | file LICENSE
+  license: GPL (>= 2) | file LICENSE
   summary: Provides low-level socket and protocol support for handling HTTP and WebSocket requests
     directly from within R. It is primarily intended as a building block for other packages,
     rather than making it particularly easy to create complete web applications using
@@ -85,22 +92,23 @@ extra:
 # Package: httpuv
 # Type: Package
 # Title: HTTP and WebSocket Server Library
-# Version: 1.3.5
+# Version: 1.4.3
 # Author: Joe Cheng, Hector Corrada Bravo [ctb], Jeroen Ooms [ctb], Winston Chang [ctb]
 # Copyright: RStudio, Inc.; Joyent, Inc.; Nginx Inc.; Igor Sysoev; Niels Provos; Internet Systems Consortium, Inc.; Alexander Chemeris
 # Maintainer: Joe Cheng <joe@rstudio.com>
 # Description: Provides low-level socket and protocol support for handling HTTP and WebSocket requests directly from within R. It is primarily intended as a building block for other packages, rather than making it particularly easy to create complete web applications using httpuv alone. httpuv is built on top of the libuv and http-parser C libraries, both of which were developed by Joyent, Inc. (See LICENSE file for libuv and http-parser license information.)
-# License: GPL-3 | file LICENSE
+# License: GPL (>= 2) | file LICENSE
 # Depends: R (>= 2.15.1), methods
-# Imports: Rcpp (>= 0.11.0), utils
-# LinkingTo: Rcpp
+# Imports: Rcpp (>= 0.11.0), utils, promises, later (>= 0.7.2)
+# LinkingTo: Rcpp, BH, later
 # URL: https://github.com/rstudio/httpuv
 # SystemRequirements: GNU make
-# RoxygenNote: 6.0.1
+# RoxygenNote: 6.0.1.9000
+# Suggests: testthat, callr
 # NeedsCompilation: yes
-# Packaged: 2017-07-03 21:47:04 UTC; jcheng
+# Packaged: 2018-05-09 20:51:45 UTC; jcheng
 # Repository: CRAN
-# Date/Publication: 2017-07-04 07:02:15 UTC
+# Date/Publication: 2018-05-10 13:55:00 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
