--- a/r-implyr-feedstock/recipe/meta.yaml
+++ b/r-implyr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.2.1' %}
+{% set version = '0.2.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,17 +8,17 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: implyr_0.2.1.tar.gz  # [linux or win32]
+  fn: implyr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/implyr_0.2.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/implyr/implyr_0.2.1.tar.gz  # [linux or win32]
-  sha256: 3e5dfd8228d155e6c597bfed7168cd93daa129ffed9f0ccf7c6b5625b2523939  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/implyr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/implyr/implyr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 4d479b496e4b0670b66c36e160537589c6f9a6df15cf4caadb6d057c396285f5  # [linux or win32]
 
-  url: https://mran.microsoft.com/snapshot/2018-01-01/bin/windows/contrib/3.4/implyr_0.2.1.zip  # [win64]
-  sha256: 05c0596f334ae0285026a1fff051c501292ef7ac0e848f2710365b657eb5e50e  # [win64]
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/implyr_0.2.4.zip  # [win64]
+  sha256: d8fb8a6b101e1834677f0d12a9f876a22bb44cc62093bbf98f282d1e3d7a5314  # [win64]
 
-  url: https://mran.microsoft.com/snapshot/2018-01-01/bin/macosx/el-capitan/contrib/3.4/implyr_0.2.1.tgz  # [osx]
-  sha256: ae644cc1e1f08b699c64780c91cc33a16fdb6718a00388f13685c7fbd9293764  # [osx]
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/implyr_0.2.4.tgz  # [osx]
+  sha256: 6fb89a937c77e499bc9fd499d419b75c9fa3229911c6a79ae15831f766b37fb2  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
@@ -30,25 +30,27 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: Lahman (>= 3.0-1), odbc, RJDBC, nycflights13, testthat
+# Suggests: Lahman (>= 3.0-1), odbc, RJDBC, rJava (>= 0.4-15), nycflights13, testthat
 requirements:
   build:
 
   host:
     - mro-base
-    - r-dbi >=0.6_1
+    - r-dbi >=0.7
     - r-assertthat
-    - r-dbplyr >=0.0.0.9001
-    - r-dplyr >=0.5.0.9005
-    - r-rlang >=0.1.0
+    - r-dbplyr >=1.2.1
+    - r-dplyr >=0.7.4
+    - r-rlang >=0.1.6
+    - r-tidyselect >=0.2.3
 
   run:
     - mro-base
-    - r-dbi >=0.6_1
+    - r-dbi >=0.7
     - r-assertthat
-    - r-dbplyr >=0.0.0.9001
-    - r-dplyr >=0.5.0.9005
-    - r-rlang >=0.1.0
+    - r-dbplyr >=1.2.1
+    - r-dplyr >=0.7.4
+    - r-rlang >=0.1.6
+    - r-tidyselect >=0.2.3
 
 test:
   commands:
@@ -65,11 +67,12 @@ test:
 about:
   home: https://github.com/ianmcook/implyr
   license: Apache License 2.0 | file LICENSE
-  summary: '''SQL'' back-end to ''dplyr'' for Apache Impala (incubating), the  massively parallel
-    processing query engine for Apache ''Hadoop''. Impala  enables low-latency ''SQL''
-    queries on data stored in the ''Hadoop''  Distributed File System ''(HDFS)'', Apache
-    ''HBase'', Apache ''Kudu'', and  Amazon Simple Storage Service ''(S3)''. See <https://impala.apache.org>  for
-    more information about Impala.'
+  summary: '''SQL'' back-end to ''dplyr'' for Apache Impala, the massively parallel processing
+    query engine for Apache ''Hadoop''. Impala enables low-latency ''SQL'' queries on
+    data stored in the ''Hadoop'' Distributed File System ''(HDFS)'', Apache ''HBase'',
+    Apache ''Kudu'', Amazon Simple  Storage Service ''(S3)'', Microsoft Azure Data Lake
+    Store ''(ADLS)'',  and Dell ''EMC'' ''Isilon''. See <https://impala.apache.org>
+    for more information about Impala.'
 
   license_family: APACHE
 
@@ -82,23 +85,23 @@ extra:
 # Package: implyr
 # Type: Package
 # Title: R Interface for Apache Impala
-# Version: 0.2.1
+# Version: 0.2.4
 # Authors@R: c( person("Ian", "Cook", email = "ian@cloudera.com", role = c("aut", "cre")), person(family = "Cloudera", role = c("cph")) )
 # Maintainer: Ian Cook <ian@cloudera.com>
-# Description: 'SQL' back-end to 'dplyr' for Apache Impala (incubating), the  massively parallel processing query engine for Apache 'Hadoop'. Impala  enables low-latency 'SQL' queries on data stored in the 'Hadoop'  Distributed File System '(HDFS)', Apache 'HBase', Apache 'Kudu', and  Amazon Simple Storage Service '(S3)'. See <https://impala.apache.org>  for more information about Impala.
+# Description: 'SQL' back-end to 'dplyr' for Apache Impala, the massively parallel processing query engine for Apache 'Hadoop'. Impala enables low-latency 'SQL' queries on data stored in the 'Hadoop' Distributed File System '(HDFS)', Apache 'HBase', Apache 'Kudu', Amazon Simple  Storage Service '(S3)', Microsoft Azure Data Lake Store '(ADLS)',  and Dell 'EMC' 'Isilon'. See <https://impala.apache.org> for more information about Impala.
 # URL: https://github.com/ianmcook/implyr
 # BugReports: https://github.com/ianmcook/implyr/issues
-# Depends: R (>= 3.1.2), dplyr (>= 0.5.0.9005)
-# Imports: assertthat, DBI (>= 0.6-1), dbplyr (>= 0.0.0.9001), methods, rlang (>= 0.1.0), utils
-# Suggests: Lahman (>= 3.0-1), odbc, RJDBC, nycflights13, testthat
+# Depends: R (>= 3.2), DBI (>= 0.7), dplyr (>= 0.7.4)
+# Imports: assertthat, dbplyr (>= 1.2.1), methods, rlang (>= 0.1.6), tidyselect (>= 0.2.3), utils
+# Suggests: Lahman (>= 3.0-1), odbc, RJDBC, rJava (>= 0.4-15), nycflights13, testthat
 # SystemRequirements: Impala driver to support a 'DBI'-compatible R interface
 # NeedsCompilation: no
 # License: Apache License 2.0 | file LICENSE
 # RoxygenNote: 6.0.1
-# Packaged: 2017-06-27 16:41:35 UTC; icook
+# Packaged: 2018-05-17 15:23:45 UTC; icook
 # Author: Ian Cook [aut, cre], Cloudera [cph]
 # Repository: CRAN
-# Date/Publication: 2017-06-27 21:16:44 UTC
+# Date/Publication: 2018-05-17 18:34:52 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
