--- a/r-leaflet-feedstock/recipe/meta.yaml
+++ b/r-leaflet-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.0' %}
+{% set version = '2.0.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: leaflet_1.1.0.tar.gz  # [linux or win32]
+  fn: leaflet_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/leaflet_1.1.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/leaflet/leaflet_1.1.0.tar.gz  # [linux or win32]
-  sha256: f474be80f40f62175c5a08aab7e549251ced9faa70d340374d522fdaf08cca15  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/leaflet_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/leaflet/leaflet_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 06bf9167774e0f0e9baa1433049e49537d2e0f191e298d5f013ac7a7d5c0a446  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/leaflet_2.0.0.zip  # [win64]
+  sha256: 8e197448f316707856a3dfa6072fcbfd7dfb4a199a0b0449cda7d5321a3bec05  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/leaflet_1.1.0.zip  # [win64]
-  sha256: dfefd5d1c2245ef8009082c4b1d84a659313a35c4e9da3103cd2978fab661434  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/leaflet_1.1.0.tgz  # [osx]
-  sha256: e101324ec92d3c79ec450175413c00f4f8214563be5feec8253d0e22b1f9bd77  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/leaflet_2.0.0.tgz  # [osx]
+  sha256: babc5425d8d5554aa56d380ad6d0dff12747f6b2a269aa69c446ad257abf5fee  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -86,7 +81,7 @@ about:
   license: GPL-3
   summary: Create and customize interactive maps using the 'Leaflet' JavaScript library and the
     'htmlwidgets' package. These maps can be used directly from the R console, from
-    'RStudio', in Shiny apps and R Markdown documents.
+    'RStudio', in Shiny applications and R Markdown documents.
   license_family: GPL3
 
 extra:
@@ -98,24 +93,23 @@ extra:
 # Package: leaflet
 # Type: Package
 # Title: Create Interactive Web Maps with the JavaScript 'Leaflet' Library
-# Version: 1.1.0
-# Date: 2017-02-17
-# Authors@R: c( person("Joe", "Cheng", email = "joe@rstudio.com", role = c("aut", "cre")), person("Bhaskar", "Karambelkar", role = c("aut")), person("Yihui", "Xie", role = c("aut")), person("Hadley", "Wickham", role = c("ctb")), person("Kenton", "Russell", role = c("ctb")), person("Kent", "Johnson", role=c("ctb")), person("jQuery Foundation and contributors", role = c("ctb", "cph"), comment = "jQuery library"), person("Vladimir", "Agafonkin", role = c("ctb", "cph"), comment = "Leaflet library"), person("CloudMade", role = c("cph"), comment = "Leaflet library"), person("Leaflet contributors", role = c("ctb"), comment = "Leaflet library"), person("Leaflet Providers contributors", role = c("ctb", "cph"), comment = "Leaflet Providers plugin"), person("Brandon Copeland", role = c("ctb", "cph"), comment = "leaflet-measure plugin"), person("Jacob Toye", role = c("ctb", "cph"), comment = "Leaflet.label plugin"), person("Joerg Dietrich", role = c("ctb", "cph"), comment = "Leaflet.Terminator plugin"), person("Benjamin Becquet", role = c("ctb", "cph"), comment = "Leaflet.MagnifyingGlass plugin"), person("Norkart AS", role = c("ctb", "cph"), comment = "Leaflet.MiniMap plugin"), person("L. Voogdt", role = c("ctb", "cph"), comment = "Leaflet.awesome-markers plugin"), person("Daniel Montague", role = c("ctb", "cph"), comment = "Leaflet.EasyButton plugin"), person("Kartena AB", role = c("ctb", "cph"), comment = "Proj4Leaflet plugin"), person("Robert Kajic", role = c("ctb", "cph"), comment = "leaflet-locationfilter plugin"), person("Mapbox", role = c("ctb", "cph"), comment = "leaflet-omnivore plugin"), person("Michael Bostock", role = c("ctb", "cph"), comment = "topojson"), person("RStudio", role = c("cph")) )
+# Version: 2.0.0
+# Authors@R: c( person("Joe", "Cheng", email = "joe@rstudio.com", role = c("aut", "cre")), person("Bhaskar", "Karambelkar", role = c("aut")), person("Yihui", "Xie", role = c("aut")), person("Hadley", "Wickham", role = c("ctb")), person("Kenton", "Russell", role = c("ctb")), person("Kent", "Johnson", role = c("ctb")), person("Barret", "Schloerke", role = c("ctb")), person("jQuery Foundation and contributors", role = c("ctb", "cph"), comment = "jQuery library"), person("Vladimir", "Agafonkin", role = c("ctb", "cph"), comment = "Leaflet library"), person("CloudMade", role = c("cph"), comment = "Leaflet library"), person("Leaflet contributors", role = c("ctb"), comment = "Leaflet library"), person("Leaflet Providers contributors", role = c("ctb", "cph"), comment = "Leaflet Providers plugin"), person("Brandon Copeland", role = c("ctb", "cph"), comment = "leaflet-measure plugin"), person("Joerg Dietrich", role = c("ctb", "cph"), comment = "Leaflet.Terminator plugin"), person("Benjamin Becquet", role = c("ctb", "cph"), comment = "Leaflet.MagnifyingGlass plugin"), person("Norkart AS", role = c("ctb", "cph"), comment = "Leaflet.MiniMap plugin"), person("L. Voogdt", role = c("ctb", "cph"), comment = "Leaflet.awesome-markers plugin"), person("Daniel Montague", role = c("ctb", "cph"), comment = "Leaflet.EasyButton plugin"), person("Kartena AB", role = c("ctb", "cph"), comment = "Proj4Leaflet plugin"), person("Robert Kajic", role = c("ctb", "cph"), comment = "leaflet-locationfilter plugin"), person("Mapbox", role = c("ctb", "cph"), comment = "leaflet-omnivore plugin"), person("Michael Bostock", role = c("ctb", "cph"), comment = "topojson"), person("RStudio", role = c("cph")) )
 # Maintainer: Joe Cheng <joe@rstudio.com>
-# Description: Create and customize interactive maps using the 'Leaflet' JavaScript library and the 'htmlwidgets' package. These maps can be used directly from the R console, from 'RStudio', in Shiny apps and R Markdown documents.
+# Description: Create and customize interactive maps using the 'Leaflet' JavaScript library and the 'htmlwidgets' package. These maps can be used directly from the R console, from 'RStudio', in Shiny applications and R Markdown documents.
 # License: GPL-3
 # URL: http://rstudio.github.io/leaflet/
 # BugReports: https://github.com/rstudio/leaflet/issues
 # Depends: R (>= 3.1.0)
 # Imports: base64enc, crosstalk, htmlwidgets, htmltools, magrittr, markdown, methods, png, RColorBrewer, raster, scales (>= 0.2.5), sp, stats, viridis
 # Suggests: knitr, maps, sf, shiny, testit (>= 0.4), rgdal, rgeos, R6, RJSONIO, purrr, testthat
-# RoxygenNote: 5.0.1
+# RoxygenNote: 6.0.1
 # LazyData: true
 # NeedsCompilation: no
-# Packaged: 2017-02-21 16:56:25 UTC; jcheng
-# Author: Joe Cheng [aut, cre], Bhaskar Karambelkar [aut], Yihui Xie [aut], Hadley Wickham [ctb], Kenton Russell [ctb], Kent Johnson [ctb], jQuery Foundation and contributors [ctb, cph] (jQuery library), Vladimir Agafonkin [ctb, cph] (Leaflet library), CloudMade [cph] (Leaflet library), Leaflet contributors [ctb] (Leaflet library), Leaflet Providers contributors [ctb, cph] (Leaflet Providers plugin), Brandon Copeland [ctb, cph] (leaflet-measure plugin), Jacob Toye [ctb, cph] (Leaflet.label plugin), Joerg Dietrich [ctb, cph] (Leaflet.Terminator plugin), Benjamin Becquet [ctb, cph] (Leaflet.MagnifyingGlass plugin), Norkart AS [ctb, cph] (Leaflet.MiniMap plugin), L. Voogdt [ctb, cph] (Leaflet.awesome-markers plugin), Daniel Montague [ctb, cph] (Leaflet.EasyButton plugin), Kartena AB [ctb, cph] (Proj4Leaflet plugin), Robert Kajic [ctb, cph] (leaflet-locationfilter plugin), Mapbox [ctb, cph] (leaflet-omnivore plugin), Michael Bostock [ctb, cph] (topojson), RStudio [cph]
+# Packaged: 2018-04-20 17:46:08 UTC; barret
+# Author: Joe Cheng [aut, cre], Bhaskar Karambelkar [aut], Yihui Xie [aut], Hadley Wickham [ctb], Kenton Russell [ctb], Kent Johnson [ctb], Barret Schloerke [ctb], jQuery Foundation and contributors [ctb, cph] (jQuery library), Vladimir Agafonkin [ctb, cph] (Leaflet library), CloudMade [cph] (Leaflet library), Leaflet contributors [ctb] (Leaflet library), Leaflet Providers contributors [ctb, cph] (Leaflet Providers plugin), Brandon Copeland [ctb, cph] (leaflet-measure plugin), Joerg Dietrich [ctb, cph] (Leaflet.Terminator plugin), Benjamin Becquet [ctb, cph] (Leaflet.MagnifyingGlass plugin), Norkart AS [ctb, cph] (Leaflet.MiniMap plugin), L. Voogdt [ctb, cph] (Leaflet.awesome-markers plugin), Daniel Montague [ctb, cph] (Leaflet.EasyButton plugin), Kartena AB [ctb, cph] (Proj4Leaflet plugin), Robert Kajic [ctb, cph] (leaflet-locationfilter plugin), Mapbox [ctb, cph] (leaflet-omnivore plugin), Michael Bostock [ctb, cph] (topojson), RStudio [cph]
 # Repository: CRAN
-# Date/Publication: 2017-02-21 19:08:12
+# Date/Publication: 2018-04-20 23:06:13 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
