--- a/r-miniui-feedstock/recipe/meta.yaml
+++ b/r-miniui-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.1.1' %}
+{% set version = '0.1.1.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,33 +8,27 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: miniUI_0.1.1.tar.gz  # [linux or win32]
+  fn: miniUI_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/miniUI_0.1.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/miniUI/miniUI_0.1.1.tar.gz  # [linux or win32]
-  sha256: 9c92032071ee75ee9c26c4cfd3115877fbcb15de2fd2023109c670784b51cce1  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/miniUI_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/miniUI/miniUI_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 452b41133289f630d8026507263744e385908ca025e9a7976925c1539816b0c0  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/miniUI_0.1.1.1.zip  # [win64]
+  sha256: 51b4f37ba2d23f4dec44bda63b1a6d872b524b44e79192cf50ae3304ce77d284  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/miniUI_0.1.1.zip  # [win64]
-  sha256: c2dff574c99071bced0df6685525ae6be6b1bcfc17eae13f612859c707518f5e  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/miniUI_0.1.1.tgz  # [osx]
-  sha256: 887fe19f00601e2ec6a363bd02c9786631c0812019926d01c55780774cc5ffb6  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/miniUI_0.1.1.1.tgz  # [osx]
+  sha256: c2bf9bc9b97a28db7ad99a9f4470e77e2aecbdf02572b44f80a3d370749d2074  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
 
 requirements:
   build:
@@ -77,7 +71,7 @@ extra:
 # Package: miniUI
 # Type: Package
 # Title: Shiny UI Widgets for Small Screens
-# Version: 0.1.1
+# Version: 0.1.1.1
 # Authors@R: c( person("Joe", "Cheng", role = c("cre", "aut"), email = "joe@rstudio.com"), person(family = "RStudio", role = "cph") )
 # Description: Provides UI widget and layout functions for writing Shiny apps that work well on small screens.
 # License: GPL-3
@@ -85,11 +79,11 @@ extra:
 # Imports: shiny (>= 0.13), htmltools (>= 0.3), utils
 # RoxygenNote: 5.0.1
 # NeedsCompilation: no
-# Packaged: 2016-01-15 17:31:47 UTC; jcheng
+# Packaged: 2018-05-18 17:00:34 UTC; jcheng
 # Author: Joe Cheng [cre, aut], RStudio [cph]
 # Maintainer: Joe Cheng <joe@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2016-01-15 19:33:16
+# Date/Publication: 2018-05-18 18:37:18 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
