--- a/r-nmf-feedstock/recipe/meta.yaml
+++ b/r-nmf-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.20.6' %}
+{% set version = '0.21.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,41 +8,36 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: NMF_0.20.6.tar.gz  # [linux or win32]
+  fn: NMF_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/NMF_0.20.6.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/NMF/NMF_0.20.6.tar.gz  # [linux or win32]
-  sha256: dfccd4b4d6ec90cd7628fd128d2456d792f406cee4d32b13448dcb0ffe4ab056  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/NMF_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/NMF/NMF_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 3b30c81c66066fab4a63c5611a0313418b840d8b63414db31ef0e932872d02e3  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/NMF_0.21.0.zip  # [win64]
+  sha256: 047533bbc585254f3c210469baf1cbc8b271d4e16c62349fd1bf0269735cd058  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/NMF_0.20.6.zip  # [win64]
-  sha256: 1430ffa6d99a277f21782ad442a289b5078ef4a52efb2e881876241d132f9fe5  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/NMF_0.20.6.tgz  # [osx]
-  sha256: 5c706d5366ef4e4f25ec19bc58e2b9167623c197a10eb3d887a7e93d810fd8d2  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/NMF_0.21.0.tgz  # [osx]
+  sha256: d7db1c85880d9e1ebe760fcfda64b738e3715181e9498b90e63ed6bd813821d3  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: RcppOctave (>= 0.11), fastICA, doMPI, bigmemory (>= 4.2), synchronicity, corpcor, xtable, devtools, knitr, bibtex, RUnit, mail, Biobase
+# Suggests: fastICA, doMPI, bigmemory (>= 4.2), synchronicity(>= 1.3.2), corpcor, xtable, devtools, knitr, bibtex, RUnit, mail, Biobase
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -62,7 +57,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-rcolorbrewer
     - r-cluster
     - r-colorspace
@@ -108,25 +103,24 @@ extra:
 # Package: NMF
 # Type: Package
 # Title: Algorithms and Framework for Nonnegative Matrix Factorization (NMF)
-# Version: 0.20.6
-# Date: 2015-05-25
+# Version: 0.21.0
+# Date: 2018-02-18
 # Author: Renaud Gaujoux, Cathal Seoighe
-# Maintainer: Renaud Gaujoux <renaud@tx.technion.ac.il>
+# Maintainer: Nicolas Sauwen <nicolas.sauwen@openanalytics.eu>
 # Description: Provides a framework to perform Non-negative Matrix Factorization (NMF). The package implements a set of already published algorithms and seeding methods, and provides a framework to test, develop and plug new/custom algorithms. Most of the built-in algorithms have been optimized in C++, and the main interface function provides an easy way of performing parallel computations on multicore machines.
 # License: GPL (>= 2)
 # URL: http://renozao.github.io/NMF
-# BugReports: http://github.com/renozao/NMF/issues
-# SCM: github:renozao, r-forge
 # LazyLoad: yes
 # VignetteBuilder: knitr
 # Depends: R (>= 3.0.0), methods, utils, pkgmaker (>= 0.20), registry, rngtools (>= 1.2.3), cluster
 # Imports: graphics, stats, stringr (>= 1.0.0), digest, grid, grDevices, gridBase, colorspace, RColorBrewer, foreach, doParallel, ggplot2, reshape2
-# Suggests: RcppOctave (>= 0.11), fastICA, doMPI, bigmemory (>= 4.2), synchronicity, corpcor, xtable, devtools, knitr, bibtex, RUnit, mail, Biobase
-# Collate: 'rmatrix.R' 'nmf-package.R' 'utils.R' 'versions.R' 'algorithmic.R' 'options.R' 'grid.R' 'colorcode.R' 'atracks.R' 'aheatmap.R' 'NMF-class.R' 'transforms.R' 'Bioc-layer.R' 'NMFstd-class.R' 'NMFOffset-class.R' 'registry.R' 'heatmaps.R' 'NMFns-class.R' 'nmfModel.R' 'fixed-terms.R' 'NMFfit-class.R' 'NMFSet-class.R' 'NMFStrategy-class.R' 'NMFSeed-class.R' 'NMFStrategyFunction-class.R' 'NMFStrategyIterative-class.R' 'NMFStrategyOctave-class.R' 'NMFplots.R' 'registry-algorithms.R' 'algorithms-base.R' 'algorithms-brunet.R' 'algorithms-lnmf.R' 'algorithms-lsnmf.R' 'algorithms-pe-nmf.R' 'algorithms-siNMF.R' 'algorithms-snmf.R' 'data.R' 'extractFeatures.R' 'registry-seed.R' 'parallel.R' 'nmf.R' 'rnmf.R' 'run.R' 'seed-base.R' 'seed-ica.R' 'seed-nndsvd.R' 'setNMFClass.R' 'simulation.R' 'tests.R'
-# Packaged: 2015-05-25 21:34:47 UTC; renaud
+# Suggests: fastICA, doMPI, bigmemory (>= 4.2), synchronicity(>= 1.3.2), corpcor, xtable, devtools, knitr, bibtex, RUnit, mail, Biobase
+# Collate: 'colorcode.R' 'options.R' 'grid.R' 'atracks.R' 'aheatmap.R' 'algorithmic.R' 'nmf-package.R' 'rmatrix.R' 'utils.R' 'versions.R' 'NMF-class.R' 'transforms.R' 'Bioc-layer.R' 'NMFstd-class.R' 'NMFOffset-class.R' 'heatmaps.R' 'NMFns-class.R' 'nmfModel.R' 'fixed-terms.R' 'NMFfit-class.R' 'NMFSet-class.R' 'NMFStrategy-class.R' 'registry.R' 'NMFSeed-class.R' 'NMFStrategyFunction-class.R' 'NMFStrategyIterative-class.R' 'NMFplots.R' 'registry-algorithms.R' 'algorithms-base.R' 'algorithms-lnmf.R' 'algorithms-lsnmf.R' 'algorithms-pe-nmf.R' 'algorithms-siNMF.R' 'algorithms-snmf.R' 'data.R' 'extractFeatures.R' 'parallel.R' 'registry-seed.R' 'nmf.R' 'rnmf.R' 'run.R' 'seed-base.R' 'seed-ica.R' 'seed-nndsvd.R' 'setNMFClass.R' 'simulation.R' 'tests.R'
+# Packaged: 2018-03-06 09:53:11 UTC; nsauwen
 # NeedsCompilation: yes
 # Repository: CRAN
-# Date/Publication: 2015-05-26 08:12:33
+# Date/Publication: 2018-03-06 16:35:36 UTC
+# RoxygenNote: 6.0.1
 
 # See
 # http://docs.continuum.io/conda/build.html for
