--- a/r-oce-feedstock/recipe/meta.yaml
+++ b/r-oce-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.9-22' %}
+{% set version = '0.9-23' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: oce_0.9-22.tar.gz  # [linux or win32]
+  fn: oce_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/oce_0.9-22.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/oce/oce_0.9-22.tar.gz  # [linux or win32]
-  sha256: 50da1c1d047b82045f513fd7632e599cdd76d1cdfc1fbff0f813e8922199af73  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/oce_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/oce/oce_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 390fd082710ee1586074ff20df61208df4c76b9f2dc0c9b1125aade4c934b04c  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/oce_0.9-23.zip  # [win64]
+  sha256: 55c09afed386384bbfe5dcbb9e393ba9c14e04b574aff8a6f8efa8f7f6a55116  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/oce_0.9-22.zip  # [win64]
-  sha256: 708ea6c0d254bbca2c2c3b8587b6c0c63ecfa472647b7dda126e66a83b7c2043  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/oce_0.9-22.tgz  # [osx]
-  sha256: 5f359311fcf1ef1ff99a222dd4aeccc8166b174dc33a13c3e52dc8a123c33576  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/oce_0.9-23.tgz  # [osx]
+  sha256: f69ab674852f381125529117e57c025cb71b8a09f85b99c436cdfd4134b69518  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,12 +33,12 @@ build:
 # Suggests: ocedata, foreign, ncdf4, tiff, akima, RSQLite, DBI, rgdal (>= 1.1-9), R.utils, knitr, rmarkdown, marmap, lubridate
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{ compiler('fortran') }}    # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{ compiler('fortran') }}  # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -52,7 +47,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-gsw
     - r-testthat
 
@@ -88,7 +83,7 @@ extra:
 # Package: oce
 # Type: Package
 # Title: Analysis of Oceanographic Data
-# Version: 0.9-22
+# Version: 0.9-23
 # Authors@R: c(person(given="Dan", family="Kelley", email="Dan.Kelley@Dal.Ca", role=c("aut", "cre")), person(given="Clark", family="Richards", email="clark.richards@gmail.com", role=c("aut")), person(given="Chantelle", family="Layton", email="chantelle.layton@dal.ca", role=c("ctb"), comment="curl() coauthor"), person(given="British Geological Survey", role=c("ctb","cph"), comment="magnetic-field subroutine"))
 # Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
 # Depends: R (>= 2.15), utils, methods, gsw, testthat
@@ -103,10 +98,10 @@ extra:
 # BuildVignettes: true
 # VignetteBuilder: knitr
 # NeedsCompilation: yes
-# Packaged: 2017-08-28 15:25:38 UTC; kelley
+# Packaged: 2018-01-28 19:14:15 UTC; kelley
 # Author: Dan Kelley [aut, cre], Clark Richards [aut], Chantelle Layton [ctb] (curl() coauthor), British Geological Survey [ctb, cph] (magnetic-field subroutine)
 # Repository: CRAN
-# Date/Publication: 2017-08-28 18:50:30 UTC
+# Date/Publication: 2018-01-28 21:13:31 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
