--- a/r-odbc-feedstock/recipe/meta.yaml
+++ b/r-odbc-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.3' %}
+{% set version = '1.1.5' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: odbc_1.1.3.tar.gz  # [linux or win32]
+  fn: odbc_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/odbc_1.1.3.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/odbc/odbc_1.1.3.tar.gz  # [linux or win32]
-  sha256: e16d2d82c22fb88cd9400b08daa3ad1d85f9910888e04f2d2ad86627d790f884  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/odbc_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/odbc/odbc_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 15cb1535a6aec6fb7c24b962223d2ca415a6a944f65371d69091ec50b6165173  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/odbc_1.1.5.zip  # [win64]
+  sha256: a4f0da8429da66f6c971bc2e9defdad126b36ad9ac1532c59846dde648f8e3a3  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/odbc_1.1.3.zip  # [win64]
-  sha256: 8d9b7da3ba87b02b05645310d46189012dc87bea77fc83e8658742ab5d674bed  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/odbc_1.1.3.tgz  # [osx]
-  sha256: 52028bc2af1379dbddedd623e2157e43113ef6e3ae42ae4555c2b85738f5c9c3  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/odbc_1.1.5.tgz  # [osx]
+  sha256: e5ad56cce17919b7f0db1711b3208793ebb52fd7f1562be1962e71c6a471e792  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,17 +33,17 @@ build:
 # Suggests: tibble, DBItest, testthat, covr, magrittr
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}sed                 # [win32]
-    - {{posix}}grep                # [win32]
-    - {{posix}}autoconf            # [linux or win32]
-    - {{posix}}automake-wrapper    # [win32]
-    - {{posix}}automake            # [win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}sed               # [win32]
+    - {{posix}}grep              # [win32]
+    - {{posix}}autoconf          # [linux or win32]
+    - {{posix}}automake-wrapper  # [win32]
+    - {{posix}}automake          # [win32]
     - {{posix}}pkg-config
-    - {{posix}}make                # [linux or win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -62,7 +57,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-bh
     - r-dbi >=0.3.0
     - r-rcpp >=0.12.11
@@ -84,7 +79,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/rstats-db/odbc
+  home: https://github.com/r-dbi/odbc
   license: MIT + file LICENSE
   summary: A DBI-compatible interface to ODBC databases.
   license_family: MIT
@@ -97,26 +92,27 @@ extra:
 
 # Package: odbc
 # Title: Connect to ODBC Compatible Databases (using the DBI Interface)
-# Version: 1.1.3
+# Version: 1.1.5
 # Authors@R: c( person("Jim", "Hester", , "james.hester@rstudio.com", role = c("aut", "cre")), person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut")), person("lexicalunit", role = c("cph"), comment = "nanodbc library"), person("Google Inc.", role = c("cph"), comment = "cctz library"), person("RStudio", role = c("cph", "fnd")) )
 # Description: A DBI-compatible interface to ODBC databases.
 # License: MIT + file LICENSE
-# URL: https://github.com/rstats-db/odbc
-# BugReports: https://github.com/rstats-db/odbc/issues
+# URL: https://github.com/r-dbi/odbc
+# BugReports: https://github.com/r-dbi/odbc/issues
 # SystemRequirements: C++11, GNU make, An ODBC3 driver manager and drivers.
-# RoxygenNote: 6.0.1
+# RoxygenNote: 6.0.1.9000
 # LazyData: true
 # ByteCompile: true
+# Depends: R (>= 3.2.0)
 # Imports: DBI (>= 0.3.0), methods, Rcpp (>= 0.12.11), blob (>= 1.1.0), bit64, hms
 # Suggests: tibble, DBItest, testthat, covr, magrittr
 # LinkingTo: Rcpp, BH
-# Collate: 'odbc.R' 'Driver.R' 'Connection.R' 'DataTypes.R' 'RcppExports.R' 'Result.R' 'Table.R' 'Viewer.R' 'db_oracle.R' 'hidden.R' 'utils.R' 'zzz.R'
+# Collate: 'odbc.R' 'Driver.R' 'Connection.R' 'DataTypes.R' 'RcppExports.R' 'Result.R' 'Table.R' 'Viewer.R' 'db.R' 'hidden.R' 'utils.R' 'zzz.R'
 # NeedsCompilation: yes
-# Packaged: 2017-10-04 18:28:46 UTC; jhester
+# Packaged: 2018-01-23 19:17:09 UTC; jhester
 # Author: Jim Hester [aut, cre], Hadley Wickham [aut], lexicalunit [cph] (nanodbc library), Google Inc. [cph] (cctz library), RStudio [cph, fnd]
 # Maintainer: Jim Hester <james.hester@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-10-05 15:16:40 UTC
+# Date/Publication: 2018-01-23 21:47:04 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
