--- a/r-pcapp-feedstock/recipe/meta.yaml
+++ b/r-pcapp-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.9-72' %}
+{% set version = '1.9-73' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,42 +8,35 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: pcaPP_1.9-72.tar.gz  # [linux or win32]
+  fn: pcaPP_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/pcaPP_1.9-72.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/pcaPP/pcaPP_1.9-72.tar.gz  # [linux or win32]
-  sha256: 58bd0bfb5931aecd734801654bac95f28dab6d30fd043c66c5b719b497104844  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/pcaPP_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/pcaPP/pcaPP_{{ version }}.tar.gz  # [linux or win32]
+  sha256: ca4566b0babfbe83ef9418283b08a12b3420dc362f93c6562f265df7926b53fc  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/pcaPP_1.9-73.zip  # [win64]
+  sha256: 14f0d854f57cd69f1fc601ade55fd10bc88bad79d669ded46b50556337c12f84  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/pcaPP_1.9-72.zip  # [win64]
-  sha256: 965d6505f2e3c403ad3a1ccfcb8bfd14fbb58ce0acc8ed8c039f0e2c1c82b218  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/pcaPP_1.9-72.tgz  # [osx]
-  sha256: a048831ff28e801a83af621c87ab84067f66c94ebdc9edb66a83a19c4bc2f74c  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/pcaPP_1.9-73.tgz  # [osx]
+  sha256: c3775f88b719d63b83f0896861192d0c36be1d2ace26f600c3f59bcd7a948689  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{ compiler('fortran') }}    # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -51,7 +44,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-mvtnorm
 
 test:
@@ -81,8 +74,8 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: pcaPP
-# Version: 1.9-72
-# Date: 2017-06-27
+# Version: 1.9-73
+# Date: 2018-01-04
 # Title: Robust PCA by Projection Pursuit
 # Author: Peter Filzmoser, Heinrich Fritz, Klaudius Kalcher
 # Maintainer: Valentin Todorov <valentin.todorov@chello.at>
@@ -91,8 +84,8 @@ extra:
 # License: GPL (>= 3)
 # NeedsCompilation: yes
 # Repository: CRAN
-# Packaged: 2017-06-27 15:36:56 UTC; TodorovV
-# Date/Publication: 2017-06-27 21:53:35 UTC
+# Packaged: 2018-01-05 06:39:02 UTC; TodorovV
+# Date/Publication: 2018-01-14 18:27:29 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
