--- a/r-pillar-feedstock/recipe/meta.yaml
+++ b/r-pillar-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.2.1' %}
+{% set version = '1.2.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,13 +12,13 @@ source:
   url:  # [linux or win32]
     - {{ cran_mirror }}/src/contrib/pillar_{{ version }}.tar.gz  # [linux or win32]
     - {{ cran_mirror }}/src/contrib/Archive/pillar/pillar_{{ version }}.tar.gz  # [linux or win32]
-  sha256: 6de997a43416f436039f2b8b47c46ea08d2508f8ad341e0e1fd878704a3dcde7  # [linux or win32]
+  sha256: c81d1b5c6b55d789a6717dc3c7be1200eb0efbcfc5013db00d553d9cafd6f0e7  # [linux or win32]
 
-  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/pillar_1.2.1.zip  # [win64]
-  sha256: b0d883439f7817142d00b9be600fe9d7bf0df12a169eafdd31a392e52a57a5d1  # [win64]
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/pillar_1.2.3.zip  # [win64]
+  sha256: ac1f1065f033b864352567181b16e699e02833c8af0bf7572fb2c6bddba22c4e  # [win64]
 
-  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/pillar_1.2.1.tgz  # [osx]
-  sha256: 7c11d53efdcffa165ef2ecb596c76aaffc957028f09ac3e2bcac663f4a148b43  # [osx]
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/pillar_1.2.3.tgz  # [osx]
+  sha256: 27b8a4201bcc40252201ed6105a00bc224938d45602d8a5fb7468fad705fd11d  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
@@ -30,7 +30,7 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: knitr (>= 1.19), lubridate, testthat (>= 2.0.0)
+# Suggests: knitr (>= 1.19), lubridate, testthat (>= 2.0.0), withr
 requirements:
   build:
 
@@ -75,7 +75,7 @@ extra:
 
 # Package: pillar
 # Title: Coloured Formatting for Columns
-# Version: 1.2.1
+# Version: 1.2.3
 # Authors@R: c( person("Kirill", "Muller", , "krlmlr+r@mailbox.org", role = c("aut", "cre")), person("Hadley", "Wickham", role = "aut"), person("RStudio", role = "cph") )
 # Description: Provides a 'pillar' generic designed for formatting columns of data using the full range of colours provided by modern terminals.
 # License: GPL-3
@@ -84,15 +84,15 @@ extra:
 # URL: https://github.com/r-lib/pillar
 # BugReports: https://github.com/r-lib/pillar/issues
 # Imports: cli (>= 1.0.0), crayon (>= 1.3.4), methods, rlang (>= 0.2.0), utf8 (>= 1.1.3)
-# Suggests: knitr (>= 1.19), lubridate, testthat (>= 2.0.0)
+# Suggests: knitr (>= 1.19), lubridate, testthat (>= 2.0.0), withr
 # RoxygenNote: 6.0.1.9000
 # Collate: 'capital.R' 'compat-purrr.R' 'dim.R' 'extent.R' 'multi.R' 'ornament.R' 'pillar-package.R' 'pillar.R' 'rowid-capital.R' 'rowid-data.R' 'rowid-title.R' 'rowid-type.R' 'scientific.R' 'shaft.R' 'shaft-simple.R' 'sigfig.R' 'spark-bar.R' 'spark-line.R' 'strrep.R' 'styles.R' 'testthat.R' 'tick.R' 'title.R' 'type-sum.R' 'type.R' 'utils.R' 'width.R' 'zzz.R'
 # NeedsCompilation: no
-# Packaged: 2018-02-27 05:56:38 UTC; muelleki
+# Packaged: 2018-05-25 15:53:30 UTC; kirill
 # Author: Kirill Muller [aut, cre], Hadley Wickham [aut], RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2018-02-27 12:42:32 UTC
+# Date/Publication: 2018-05-25 17:41:36 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
