--- a/r-pool-feedstock/recipe/meta.yaml
+++ b/r-pool-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.1.3' %}
+{% set version = '0.1.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: pool_0.1.3.tar.gz  # [linux or win32]
+  fn: pool_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/pool_0.1.3.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/pool/pool_0.1.3.tar.gz  # [linux or win32]
-  sha256: 37cf5b65e5e79596f1401d9a0f0dded5651aa351a604f0326dc2746be20f4531  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/pool_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/pool/pool_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 78b2da4e53ed970dabec5f9a81ad85eda64083e4129a753c547c0a0a884d404c  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/pool_0.1.4.zip  # [win64]
+  sha256: 63eb2ad967e42c75326361b3f540d3f2773d8da4b58483c0e3a4f9eb8af53a93  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/pool_0.1.3.zip  # [win64]
-  sha256: 41fac45746ca399bfb8f6834d3ce6f224a3fa1d02f770f6ae260819f84334931  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/pool_0.1.3.tgz  # [osx]
-  sha256: c6c352965dc3c6badfe69809115ec7351f0b2c9ba6c6c294c94685426fa1f241  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/pool_0.1.4.tgz  # [osx]
+  sha256: abfb3bb7626eac0971035650471415d0d37a4166bee027840b4f61d4b95bb583  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -83,7 +78,7 @@ extra:
 # Package: pool
 # Type: Package
 # Title: Object Pooling
-# Version: 0.1.3
+# Version: 0.1.4
 # Authors@R: c( person("Barbara", "Borges", email = "barbara@rstudio.com", role = c("aut", "cre")), person(family = "RStudio", role = "cph") )
 # Description: Enables the creation of object pools, which make it less computationally expensive to fetch a new object. Currently the only supported pooled objects are 'DBI' connections.
 # License: GPL-3
@@ -96,11 +91,11 @@ extra:
 # Collate: 'utils.R' 'scheduler.R' 'pool.R' 'pool-methods.R' 'object.R' 'DBI.R' 'DBI-connection-interpolate.R' 'DBI-connection-quote.R' 'DBI-connection-sql.R' 'DBI-connection-transaction.R' 'DBI-connection.R' 'DBI-driver.R' 'DBI-object-deprecated.R' 'DBI-object.R' 'DBI-pool.R' 'dbplyr.R'
 # RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-11-03 22:44:37 UTC; barbaraborges
+# Packaged: 2018-03-09 22:13:12 UTC; barbaraborges
 # Author: Barbara Borges [aut, cre], RStudio [cph]
 # Maintainer: Barbara Borges <barbara@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-11-03 23:27:36 UTC
+# Date/Publication: 2018-03-10 15:59:22 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
