--- a/r-prodlim-feedstock/recipe/meta.yaml
+++ b/r-prodlim-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.6.1' %}
+{% set version = '2018.04.18' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,41 +8,35 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: prodlim_1.6.1.tar.gz  # [linux or win32]
+  fn: prodlim_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/prodlim_1.6.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/prodlim/prodlim_1.6.1.tar.gz  # [linux or win32]
-  sha256: 3f2665257118a3db8682731a500b1ae4d669af344672dc2037f987bee3cca154  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/prodlim_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/prodlim/prodlim_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 4b22b54fdf712439309be0ff74f63cde9080464667b00e19823372ac0fc254ab  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/prodlim_2018.04.18.zip  # [win64]
+  sha256: 325e08f230c476c47e221c188826c2955e68f1d48394008d518b10c83affad4e  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/prodlim_1.6.1.zip  # [win64]
-  sha256: 61da9e2cdf390451ea20569278e22b2a664630fbb8632b5b81646a69f8b5096d  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/prodlim_1.6.1.tgz  # [osx]
-  sha256: 80056de57bc7f9477220a69b489547b424b3340763a34ab32c79623d179dbfd9  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/prodlim_2018.04.18.tgz  # [osx]
+  sha256: 8ed3e542474003c0413c71a779f66b8f90ecf277c294ba9f0f100f2fa3cd3317  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -53,7 +47,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-kernsmooth
     - r-rcpp >=0.11.5
     - r-lava
@@ -86,7 +80,7 @@ extra:
 
 # Package: prodlim
 # Title: Product-Limit Estimation for Censored Event History Analysis
-# Version: 1.6.1
+# Version: 2018.04.18
 # Author: Thomas A. Gerds
 # Description: Fast and user friendly implementation of nonparametric estimators for censored event history (survival) analysis. Kaplan-Meier and Aalen-Johansen method.
 # Depends: R (>= 2.9.0)
@@ -94,11 +88,11 @@ extra:
 # LinkingTo: Rcpp
 # Maintainer: Thomas A. Gerds <tag@biostat.ku.dk>
 # License: GPL (>= 2)
-# Packaged: 2017-03-06 12:06:02 UTC; tag
-# RoxygenNote: 5.0.1
+# Packaged: 2018-04-18 06:30:07 UTC; tag
+# RoxygenNote: 6.0.1
 # NeedsCompilation: yes
 # Repository: CRAN
-# Date/Publication: 2017-03-06 13:53:09
+# Date/Publication: 2018-04-18 08:19:40 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
