--- a/r-pryr-feedstock/recipe/meta.yaml
+++ b/r-pryr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.1.3' %}
+{% set version = '0.1.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: pryr_0.1.3.tar.gz  # [linux or win32]
+  fn: pryr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/pryr_0.1.3.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/pryr/pryr_0.1.3.tar.gz  # [linux or win32]
-  sha256: 6acd88341dde4fe247a5cafd3949b281dc6742b7d60f68b57c1feb84b96739ac  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/pryr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/pryr/pryr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: d39834316504c49ecd4936cbbcaf3ee3dae6ded287af42475bf38c9e682f721b  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/pryr_0.1.4.zip  # [win64]
+  sha256: 155dab7a68bc61b0c6314b1877fb1d3ff768ccd360cb8d0b5773bd19f7de0306  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/pryr_0.1.3.zip  # [win64]
-  sha256: 42d168f18bfda1ecbf442f7c252d63da5cab76e23dc9d9f3f562573206171a67  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/pryr_0.1.3.tgz  # [osx]
-  sha256: ec967c98c778fdefbbf5dc1e89fb930df9d95492a02bb99d6c364ceddc886ef8  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/pryr_0.1.4.tgz  # [osx]
+  sha256: 8aacdb531776e2f509032afbd7f1c3f626c521a16e4e1bf4503276ec82472f60  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,11 +33,11 @@ build:
 # Suggests: testthat (>= 0.8.0)
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -52,7 +47,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-rcpp >=0.11.0
     - r-codetools
     - r-stringr
@@ -82,7 +77,7 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: pryr
-# Version: 0.1.3
+# Version: 0.1.4
 # Title: Tools for Computing on the Language
 # Description: Useful tools to pry back the covers of R and understand the language at a deeper level.
 # Authors@R: c( person("Hadley", "Wickham", ,"hadley@rstudio.com", c("aut", "cre")), person("R Core team", role = "ctb", comment = "Some code extracted from base R") )
@@ -95,11 +90,11 @@ extra:
 # Suggests: testthat (>= 0.8.0)
 # RoxygenNote: 6.0.1
 # NeedsCompilation: yes
-# Packaged: 2017-10-30 15:32:57 UTC; lionel
+# Packaged: 2018-02-17 16:16:12 UTC; hadley
 # Author: Hadley Wickham [aut, cre], R Core team [ctb] (Some code extracted from base R)
 # Maintainer: Hadley Wickham <hadley@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-10-30 15:34:16 UTC
+# Date/Publication: 2018-02-18 04:42:23 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
