--- a/r-rmarkdown-feedstock/recipe/meta.yaml
+++ b/r-rmarkdown-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.8' %}
+{% set version = '1.9' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,34 +8,29 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: rmarkdown_1.8.tar.gz  # [linux or win32]
+  fn: rmarkdown_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/rmarkdown_1.8.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/rmarkdown/rmarkdown_1.8.tar.gz  # [linux or win32]
-  sha256: e294b5d4dd6ea52471ba2ad151680fa05588f339d4d50393dbe6f6833a0e3e60  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/rmarkdown_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/rmarkdown/rmarkdown_{{ version }}.tar.gz  # [linux or win32]
+  sha256: cbb7da80b514c148b48b8d4b6d497ec8edf6d2f6be3c483c836eec99e19a0673  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/rmarkdown_1.9.zip  # [win64]
+  sha256: 8ecb49c4247c4f67ba392711a650134206c211b7f6f79c5493a95b3ea3bf2cec  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/rmarkdown_1.8.zip  # [win64]
-  sha256: 141564dcee01c882151ace26b5d05565ff53de9a6c68cd59112acdd4304811d2  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/rmarkdown_1.8.tgz  # [osx]
-  sha256: b32fff1c99d0ac73f9fee82e07d15aa71194ab1334140fd3af9a75413e198886  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/rmarkdown_1.9.tgz  # [osx]
+  sha256: 705971a2331a4741181504fc0a6df061201de0c4fad59481992f20ed10d1fe7d  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: shiny (>= 0.11), tufte, testthat, digest, tibble
+# Suggests: tinytex, shiny (>= 0.11), tufte, testthat, digest, tibble
 requirements:
   build:
 
@@ -76,7 +71,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: http://rmarkdown.rstudio.com
+  home: http://rmarkdown.rstudio.com, https://github.com/rstudio/rmarkdown
   license: GPL-3
   summary: Convert R Markdown documents into a variety of formats.
   license_family: GPL3
@@ -90,22 +85,23 @@ extra:
 # Package: rmarkdown
 # Type: Package
 # Title: Dynamic Documents for R
-# Version: 1.8
+# Version: 1.9
 # Authors@R: c( person("JJ", "Allaire", role = "aut", email = "jj@rstudio.com"), person("Yihui", "Xie", role = c("aut", "cre"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")), person("Jonathan", "McPherson", role = "aut", email = "jonathan@rstudio.com"), person("Javier", "Luraschi", role = "aut", email = "javier@rstudio.com"), person("Kevin", "Ushey", role = "aut", email = "kevin@rstudio.com"), person("Aron", "Atkins", role = "aut", email = "aron@rstudio.com"), person("Hadley", "Wickham", role = "aut", email = "hadley@rstudio.com"), person("Joe", "Cheng", role = "aut", email = "joe@rstudio.com"), person("Winston", "Chang", role = "aut", email = "winston@rstudio.com"), person("Jeff", "Allen", role = "ctb", email = "jeff@rstudio.com"), person("Roy", "Storey", role = "ctb"), person("Rob", "Hyndman", role = "ctb", email = "Rob.Hyndman@monash.edu"), person("Ruben", "Arslan", role = "ctb", email = "ruben.arslan@uni-goettingen.de"), person(family = "RStudio, Inc.", role = "cph"), person(family = "jQuery Foundation", role = "cph", comment = "jQuery library"), person(family = "jQuery contributors", role = c("ctb", "cph"), comment = "jQuery library; authors listed in inst/rmd/h/jquery-AUTHORS.txt"), person(family = "jQuery UI contributors", role = c("ctb", "cph"), comment = "jQuery UI library; authors listed in inst/rmd/h/jqueryui-AUTHORS.txt"), person("Mark", "Otto", role = "ctb", comment = "Bootstrap library"), person("Jacob", "Thornton", role = "ctb", comment = "Bootstrap library"), person(family = "Bootstrap contributors", role = "ctb", comment = "Bootstrap library"), person(family = "Twitter, Inc", role = "cph", comment = "Bootstrap library"), person("Alexander", "Farkas", role = c("ctb", "cph"), comment = "html5shiv library"), person("Scott", "Jehl", role = c("ctb", "cph"), comment = "Respond.js library"), person("Ivan", "Sagalaev", role = c("ctb", "cph"), comment = "highlight.js library"), person("Greg", "Franko", role = c("ctb", "cph"), comment = "tocify library"), person("John", "MacFarlane", role = c("ctb", "cph"), comment = "Pandoc templates"), person(family = "Google, Inc.", role = c("ctb", "cph"), comment = "ioslides library"), person("Dave", "Raggett", role = "ctb", comment = "slidy library"), person(family = "W3C", role = "cph", comment = "slidy library"), person("Dave", "Gandy", role = c("ctb", "cph"), comment = "Font-Awesome"), person("Ben", "Sperry", role = "ctb", comment = "Ionicons"), person(family = "Drifty", role = "cph", comment = "Ionicons"), person("Aidan", "Lister", role = c("ctb", "cph"),  comment = "jQuery StickyTabs") )
 # Maintainer: Yihui Xie <xie@yihui.name>
 # Description: Convert R Markdown documents into a variety of formats.
 # Depends: R (>= 3.0)
 # Imports: tools, utils, knitr (>= 1.14), yaml (>= 2.1.5), htmltools (>= 0.3.5), evaluate (>= 0.8), base64enc, jsonlite, rprojroot, mime, methods, stringr (>= 1.2.0)
-# Suggests: shiny (>= 0.11), tufte, testthat, digest, tibble
+# Suggests: tinytex, shiny (>= 0.11), tufte, testthat, digest, tibble
 # SystemRequirements: pandoc (>= 1.12.3) - http://pandoc.org
-# URL: http://rmarkdown.rstudio.com
+# URL: http://rmarkdown.rstudio.com, https://github.com/rstudio/rmarkdown
+# BugReports: https://github.com/rstudio/rmarkdown/issues
 # License: GPL-3
 # RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-11-17 04:07:06 UTC; yihui
-# Author: JJ Allaire [aut], Yihui Xie [aut, cre] (0000-0003-0645-5666), Jonathan McPherson [aut], Javier Luraschi [aut], Kevin Ushey [aut], Aron Atkins [aut], Hadley Wickham [aut], Joe Cheng [aut], Winston Chang [aut], Jeff Allen [ctb], Roy Storey [ctb], Rob Hyndman [ctb], Ruben Arslan [ctb], RStudio, Inc. [cph], jQuery Foundation [cph] (jQuery library), jQuery contributors [ctb, cph] (jQuery library; authors listed in inst/rmd/h/jquery-AUTHORS.txt), jQuery UI contributors [ctb, cph] (jQuery UI library; authors listed in inst/rmd/h/jqueryui-AUTHORS.txt), Mark Otto [ctb] (Bootstrap library), Jacob Thornton [ctb] (Bootstrap library), Bootstrap contributors [ctb] (Bootstrap library), Twitter, Inc [cph] (Bootstrap library), Alexander Farkas [ctb, cph] (html5shiv library), Scott Jehl [ctb, cph] (Respond.js library), Ivan Sagalaev [ctb, cph] (highlight.js library), Greg Franko [ctb, cph] (tocify library), John MacFarlane [ctb, cph] (Pandoc templates), Google, Inc. [ctb, cph] (ioslides library), Dave Raggett [ctb] (slidy library), W3C [cph] (slidy library), Dave Gandy [ctb, cph] (Font-Awesome), Ben Sperry [ctb] (Ionicons), Drifty [cph] (Ionicons), Aidan Lister [ctb, cph] (jQuery StickyTabs)
+# Packaged: 2018-02-20 04:31:33 UTC; yihui
+# Author: JJ Allaire [aut], Yihui Xie [aut, cre] (<https://orcid.org/0000-0003-0645-5666>), Jonathan McPherson [aut], Javier Luraschi [aut], Kevin Ushey [aut], Aron Atkins [aut], Hadley Wickham [aut], Joe Cheng [aut], Winston Chang [aut], Jeff Allen [ctb], Roy Storey [ctb], Rob Hyndman [ctb], Ruben Arslan [ctb], RStudio, Inc. [cph], jQuery Foundation [cph] (jQuery library), jQuery contributors [ctb, cph] (jQuery library; authors listed in inst/rmd/h/jquery-AUTHORS.txt), jQuery UI contributors [ctb, cph] (jQuery UI library; authors listed in inst/rmd/h/jqueryui-AUTHORS.txt), Mark Otto [ctb] (Bootstrap library), Jacob Thornton [ctb] (Bootstrap library), Bootstrap contributors [ctb] (Bootstrap library), Twitter, Inc [cph] (Bootstrap library), Alexander Farkas [ctb, cph] (html5shiv library), Scott Jehl [ctb, cph] (Respond.js library), Ivan Sagalaev [ctb, cph] (highlight.js library), Greg Franko [ctb, cph] (tocify library), John MacFarlane [ctb, cph] (Pandoc templates), Google, Inc. [ctb, cph] (ioslides library), Dave Raggett [ctb] (slidy library), W3C [cph] (slidy library), Dave Gandy [ctb, cph] (Font-Awesome), Ben Sperry [ctb] (Ionicons), Drifty [cph] (Ionicons), Aidan Lister [ctb, cph] (jQuery StickyTabs)
 # Repository: CRAN
-# Date/Publication: 2017-11-17 08:35:18 UTC
+# Date/Publication: 2018-03-01 17:59:03 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
