--- a/r-rngtools-feedstock/recipe/meta.yaml
+++ b/r-rngtools-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.2.4' %}
+{% set version = '1.3.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,34 +8,29 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: rngtools_1.2.4.tar.gz  # [linux or win32]
+  fn: rngtools_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/rngtools_1.2.4.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/rngtools/rngtools_1.2.4.tar.gz  # [linux or win32]
-  sha256: 27019835b750f470b13dbb7fecd3b839a61b52774e23fffa191f919533768fb9  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/rngtools_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/rngtools/rngtools_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 763fc493cb821a4d3e514c0dc876d602a692c528e1d67f295dde70c77009e224  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/rngtools_1.3.1.zip  # [win64]
+  sha256: 0233565ebce28b57c2b898a0f93fc4b6e65a499b706b04224e3273879089f0b7  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/rngtools_1.2.4.zip  # [win64]
-  sha256: 68a6b7c2bafcbf5978e15573980eebcc952b7c1c5ebcc602525517da888e2e72  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/rngtools_1.2.4.tgz  # [osx]
-  sha256: 1b0d206c101c9eaa37d72e4687f4f9bf867e2ec3259d394a52ca9dc32cb23b7a  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/rngtools_1.3.1.tgz  # [osx]
+  sha256: 30810be6b7c3376a6cc8ceb6cf5d1d67e28210e8e3d9f42c7854acaab83d9a96  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: parallel, RUnit, knitr
+# Suggests: RUnit, testthat
 requirements:
   build:
 
@@ -66,11 +61,10 @@ test:
 about:
   home: https://renozao.github.io/rngtools
   license: GPL-3
-  summary: This package contains a set of functions for working with Random Number Generators
-    (RNGs). In particular, it defines a generic S4 framework for getting/setting the
-    current RNG, or RNG data that are embedded into objects for reproducibility. Notably,
-    convenient default methods greatly facilitate the way current RNG settings can be
-    changed.
+  summary: Provides a set of functions for working with Random Number Generators (RNGs). In particular,
+    a generic S4 framework is defined for getting/setting the current RNG, or RNG data
+    that are embedded into objects for reproducibility. Notably, convenient default
+    methods greatly facilitate the way current RNG settings can be changed.
   license_family: GPL3
 
 extra:
@@ -80,24 +74,25 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: rngtools
-# Maintainer: Renaud Gaujoux <renaud@tx.technion.ac.il>
-# Author: Renaud Gaujoux
-# Version: 1.2.4
+# Authors@R: person("Renaud", "Gaujoux", email = "renozao@protonmail.com", role = c("aut", "cre"))
+# Version: 1.3.1
 # License: GPL-3
-# Title: Utility functions for working with Random Number Generators
-# Description: This package contains a set of functions for working with Random Number Generators (RNGs). In particular, it defines a generic S4 framework for getting/setting the current RNG, or RNG data that are embedded into objects for reproducibility. Notably, convenient default methods greatly facilitate the way current RNG settings can be changed.
+# Title: Utility Functions for Working with Random Number Generators
+# Description: Provides a set of functions for working with Random Number Generators (RNGs). In particular, a generic S4 framework is defined for getting/setting the current RNG, or RNG data that are embedded into objects for reproducibility. Notably, convenient default methods greatly facilitate the way current RNG settings can be changed.
 # URL: https://renozao.github.io/rngtools
 # BugReports: http://github.com/renozao/rngtools/issues
-# SCM: github:renozao, r-forge
+# Encoding: UTF-8
 # Depends: R (>= 3.0.0), methods, pkgmaker (>= 0.20)
-# Imports: stringr, digest
-# Suggests: parallel, RUnit, knitr
+# Imports: stringr, digest, utils, stats, parallel
+# Suggests: RUnit, testthat
 # Collate: 'rngtools-package.r' 'format.R' 'RNG.R' 'RNGseq.R'
-# VignetteBuilder: knitr
-# Packaged: 2014-03-06 13:11:11 UTC; renaud
+# RoxygenNote: 6.0.1.9000
 # NeedsCompilation: no
+# Packaged: 2018-05-15 11:15:29 UTC; renaud
+# Author: Renaud Gaujoux [aut, cre]
+# Maintainer: Renaud Gaujoux <renozao@protonmail.com>
 # Repository: CRAN
-# Date/Publication: 2014-03-06 22:18:10
+# Date/Publication: 2018-05-15 16:41:13 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
