--- a/r-seacarb-feedstock/recipe/meta.yaml
+++ b/r-seacarb-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.2.2' %}
+{% set version = '3.2.6' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,33 +8,27 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: seacarb_3.2.2.tar.gz  # [linux or win32]
+  fn: seacarb_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/seacarb_3.2.2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/seacarb/seacarb_3.2.2.tar.gz  # [linux or win32]
-  sha256: b462a1f8f8e45e4b020c510b5eedb641be45f433842d09a2806504c4fa9c55f8  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/seacarb_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/seacarb/seacarb_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 0b2b7be699f457a9bd3bcd8dd53b841592962e78cdadd6e004b69ffd6a866680  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/seacarb_3.2.6.zip  # [win64]
+  sha256: 413a11021ddcedd29d3efbb811bbe2126f1520baee3576dc2dc3ba7248e4c79c  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/seacarb_3.2.2.zip  # [win64]
-  sha256: 05520b68cd809ffcac87b93d84f456d7bf08500fa3d364355d33df6c958fe31f  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/seacarb_3.2.2.tgz  # [osx]
-  sha256: e053238a49a16ac852becd3efee8de74857278bee772c9c2b60739017fef08f8  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/seacarb_3.2.6.tgz  # [osx]
+  sha256: 9f9be9279ce54b0de5d836abdb2369f11c721d9425c064cc848b0d81101bd795  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
 
 requirements:
   build:
@@ -76,8 +70,8 @@ extra:
 
 # Package: seacarb
 # Title: Seawater Carbonate Chemistry
-# Version: 3.2.2
-# Date: 2017-08-22
+# Version: 3.2.6
+# Date: 2018-02-27
 # LazyData: true
 # Authors@R: c(person("Jean-Pierre", "Gattuso", role = c("aut", "cre", "cph"), email = "gattuso@obs-vlfr.fr"), person("Jean-Marie", "Epitalon", role = "aut", email = "Jean-Marie.Epitalon@orange.fr"), person("Heloise", "Lavigne", role = "aut", email = "lavigne@obs-vlfr.fr"), person("James", "Orr", role = "aut"), person("Bernard", "Gentili", role = "ctb"), person("Mathilde", "Hagens", role = "ctb"), person("Andreas", "Hofmann", role = "ctb"), person("Aurelien", "Proye", role = "ctb"), person("Karline", "Soetaert", role = "ctb"), person("James", "Rae", role = "ctb") )
 # Depends: R (>= 2.10), oce, gsw
@@ -86,12 +80,12 @@ extra:
 # URL: https://CRAN.R-project.org/package=seacarb
 # License: GPL (>= 2)
 # Repository: CRAN
-# RoxygenNote: 5.0.1
+# RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-09-26 04:29:34 UTC; gattuso
+# Packaged: 2018-02-27 15:20:04 UTC; gattuso
 # Author: Jean-Pierre Gattuso [aut, cre, cph], Jean-Marie Epitalon [aut], Heloise Lavigne [aut], James Orr [aut], Bernard Gentili [ctb], Mathilde Hagens [ctb], Andreas Hofmann [ctb], Aurelien Proye [ctb], Karline Soetaert [ctb], James Rae [ctb]
 # Maintainer: Jean-Pierre Gattuso <gattuso@obs-vlfr.fr>
-# Date/Publication: 2017-09-27 09:15:37 UTC
+# Date/Publication: 2018-02-27 17:15:39 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
