--- a/r-shinyjs-feedstock/recipe/meta.yaml
+++ b/r-shinyjs-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.9.1' %}
+{% set version = '1.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,52 +8,45 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: shinyjs_0.9.1.tar.gz  # [linux or win32]
+  fn: shinyjs_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/shinyjs_0.9.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/shinyjs/shinyjs_0.9.1.tar.gz  # [linux or win32]
-  sha256: aa2a0f17d00848703e5ed9bfb3231c8c942cbd848b76d9a8ca6ed1911c992041  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/shinyjs_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/shinyjs/shinyjs_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 286b11136bc999738592d01f980e7db86930fb3216effc680688829865bc7f84  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/shinyjs_1.0.zip  # [win64]
+  sha256: 0b385394f312781d2adcd0476d3d38552b84217900c0daa5bbc93e8127434daf  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/shinyjs_0.9.1.zip  # [win64]
-  sha256: 6a422ec396836cf41fcf657d0cc6b89bb5062a872b1ffb373ee29e304150275f  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/shinyjs_0.9.1.tgz  # [osx]
-  sha256: 287e7c1427677d98c53909054abbfb6754ca365a100f5ba2346522d3dfcffc0a  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/shinyjs_1.0.tgz  # [osx]
+  sha256: b29faca6bf6201e828c4fe97e8effabd70284567ef82e8286e49314a37c86914  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: knitr (>= 1.7), rmarkdown, rstudioapi (>= 0.5), shinyAce, testthat (>= 0.9.1), V8 (>= 0.6)
+# Suggests: knitr (>= 1.7), rmarkdown, shinyAce, testthat (>= 0.9.1), V8 (>= 0.6)
 requirements:
   build:
 
   host:
     - mro-base
     - r-digest >=0.6.8
-    - r-htmltools >=0.2.6
+    - r-htmltools >=0.2.9
     - r-jsonlite
-    - r-miniui >=0.1.1
-    - r-shiny >=0.11.1
+    - r-shiny >=1.0.0
 
   run:
     - mro-base
     - r-digest >=0.6.8
-    - r-htmltools >=0.2.6
+    - r-htmltools >=0.2.9
     - r-jsonlite
-    - r-miniui >=0.1.1
-    - r-shiny >=0.11.1
+    - r-shiny >=1.0.0
 
 test:
   commands:
@@ -68,7 +61,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: http://deanattali.com/shinyjs
+  home: https://deanattali.com/shinyjs
   license: AGPL-3
   summary: 'Perform common useful JavaScript operations in Shiny apps that will greatly improve
     your apps without having to know any JavaScript. Examples include: hiding an element,
@@ -87,25 +80,25 @@ extra:
 
 # Package: shinyjs
 # Title: Easily Improve the User Experience of Your Shiny Apps in Seconds
-# Version: 0.9.1
+# Version: 1.0
 # Authors@R: person("Dean", "Attali", email = "daattali@gmail.com", role = c("aut", "cre"))
 # Description: Perform common useful JavaScript operations in Shiny apps that will greatly improve your apps without having to know any JavaScript. Examples include: hiding an element, disabling an input, resetting an input back to its original value, delaying code execution by a few seconds, and many more useful functions for both the end user and the developer. 'shinyjs' can also be used to easily call your own custom JavaScript functions from R.
-# URL: http://deanattali.com/shinyjs
+# URL: https://deanattali.com/shinyjs
 # BugReports: https://github.com/daattali/shinyjs/issues
 # Depends: R (>= 3.1.0)
-# Imports: digest (>= 0.6.8), htmltools (>= 0.2.6), jsonlite, miniUI (>= 0.1.1), shiny (>= 0.11.1), stats
-# Suggests: knitr (>= 1.7), rmarkdown, rstudioapi (>= 0.5), shinyAce, testthat (>= 0.9.1), V8 (>= 0.6)
+# Imports: digest (>= 0.6.8), htmltools (>= 0.2.9), jsonlite, shiny (>= 1.0.0)
+# Suggests: knitr (>= 1.7), rmarkdown, shinyAce, testthat (>= 0.9.1), V8 (>= 0.6)
 # License: AGPL-3
 # SystemRequirements: pandoc with https support
 # LazyData: true
 # VignetteBuilder: knitr
-# RoxygenNote: 5.0.1
+# RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-06-29 15:03:56 UTC; Dean
+# Packaged: 2018-01-08 20:00:22 UTC; Dean
 # Author: Dean Attali [aut, cre]
 # Maintainer: Dean Attali <daattali@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-06-29 22:26:58 UTC
+# Date/Publication: 2018-01-08 22:21:13 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
