--- a/r-sparklyr-feedstock/recipe/meta.yaml
+++ b/r-sparklyr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.6.4' %}
+{% set version = '0.8.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,34 +8,29 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: sparklyr_0.6.4.tar.gz  # [linux or win32]
+  fn: sparklyr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/sparklyr_0.6.4.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/sparklyr/sparklyr_0.6.4.tar.gz  # [linux or win32]
-  sha256: 21e40a53fd6041f026d26f84199762a92270754114db8ffa82159cdc12c952bf  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/sparklyr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/sparklyr/sparklyr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 7d43e7ec3abc29e2d5885c1a8f52bd3f41a18e69016690517f1e7362087abfbe  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/sparklyr_0.8.4.zip  # [win64]
+  sha256: ef781cc4020f8a9312a4085a45522fde0e9e28fec7d2e4d9a13abafff47cbc2c  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/sparklyr_0.6.4.zip  # [win64]
-  sha256: 0fb759258981126d31839ae8303fffd1c01dbbf520f8d561992479f7c110b466  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/sparklyr_0.6.4.tgz  # [osx]
-  sha256: bd1edae88c7d02c7726d2a21eeba71ab3ab4bae20695442a85bd75571de5f0e5  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/sparklyr_0.8.4.tgz  # [osx]
+  sha256: 264f85d8a31f56ab176738130b4954d044b2529742c23abfbf64c3a337f2e2a2  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: ggplot2, janeaustenr, nycflights13, testthat, RCurl
+# Suggests: ggplot2, glmnet, janeaustenr, Lahman, mlbench, nnet, nycflights13, RCurl, reshape2, testthat, tibble
 requirements:
   build:
 
@@ -55,10 +50,11 @@ requirements:
     - r-openssl >=0.8
     - r-rappdirs
     - r-readr >=1.1.0
-    - r-rlang >=0.1
+    - r-rlang >=0.1.4
     - r-rprojroot
     - r-rstudioapi
     - r-shiny >=1.0.1
+    - r-tidyr
     - r-withr
     - r-xml2
 
@@ -78,10 +74,11 @@ requirements:
     - r-openssl >=0.8
     - r-rappdirs
     - r-readr >=1.1.0
-    - r-rlang >=0.1
+    - r-rlang >=0.1.4
     - r-rprojroot
     - r-rstudioapi
     - r-shiny >=1.0.1
+    - r-tidyr
     - r-withr
     - r-xml2
 
@@ -115,8 +112,8 @@ extra:
 # Package: sparklyr
 # Type: Package
 # Title: R Interface to Apache Spark
-# Version: 0.6.4
-# Authors@R: c( person("Javier", "Luraschi", email = "javier@rstudio.com", role = c("aut", "cre")), person("Kevin", "Ushey", role = "aut", email = "kevin@rstudio.com"), person("JJ", "Allaire", role = "aut", email = "jj@rstudio.com"), person(family = "RStudio", role = c("cph")), person(family = "The Apache Software Foundation", role = c("aut", "cph")) )
+# Version: 0.8.4
+# Authors@R: c( person("Javier", "Luraschi", email = "javier@rstudio.com", role = c("aut", "cre")), person("Kevin", "Kuo", role = "aut", email = "kevin.kuo@rstudio.com", comment = c(ORCID = "0000-0001-7803-7901")), person("Kevin", "Ushey", role = "aut", email = "kevin@rstudio.com"), person("JJ", "Allaire", role = "aut", email = "jj@rstudio.com"), person(family = "RStudio", role = c("cph")), person(family = "The Apache Software Foundation", role = c("aut", "cph")) )
 # Maintainer: Javier Luraschi <javier@rstudio.com>
 # Description: R interface to Apache Spark, a fast and general engine for big data processing, see <http://spark.apache.org>. This package supports connecting to local and remote Apache Spark clusters, provides a 'dplyr' compatible back-end, and provides an interface to Spark's built-in machine learning algorithms.
 # License: Apache License 2.0 | file LICENSE
@@ -126,13 +123,13 @@ extra:
 # LazyData: TRUE
 # RoxygenNote: 6.0.1.9000
 # Depends: R (>= 3.1.2)
-# Imports: assertthat, base64enc, broom, config (>= 0.2), DBI (>= 0.6-1), dplyr (>= 0.7.2), dbplyr (>= 1.1.0), digest, httr (>= 1.2.1), jsonlite (>= 1.4), lazyeval (>= 0.2.0), methods, openssl (>= 0.8), rappdirs, readr (>= 1.1.0), rlang (>= 0.1), rprojroot, rstudioapi, shiny (>= 1.0.1), withr, xml2
-# Suggests: ggplot2, janeaustenr, nycflights13, testthat, RCurl
+# Imports: assertthat, base64enc, broom, config (>= 0.2), DBI (>= 0.6-1), dplyr (>= 0.7.2), dbplyr (>= 1.1.0), digest, httr (>= 1.2.1), jsonlite (>= 1.4), lazyeval (>= 0.2.0), methods, openssl (>= 0.8), rappdirs, readr (>= 1.1.0), rlang (>= 0.1.4), rprojroot, rstudioapi, shiny (>= 1.0.1), withr, xml2, tidyr
+# Suggests: ggplot2, glmnet, janeaustenr, Lahman, mlbench, nnet, nycflights13, RCurl, reshape2, testthat, tibble
 # NeedsCompilation: no
-# Packaged: 2017-11-01 22:42:08 UTC; javierluraschi
-# Author: Javier Luraschi [aut, cre], Kevin Ushey [aut], JJ Allaire [aut], RStudio [cph], The Apache Software Foundation [aut, cph]
+# Packaged: 2018-05-25 20:36:06 UTC; javierluraschi
+# Author: Javier Luraschi [aut, cre], Kevin Kuo [aut] (<https://orcid.org/0000-0001-7803-7901>), Kevin Ushey [aut], JJ Allaire [aut], RStudio [cph], The Apache Software Foundation [aut, cph]
 # Repository: CRAN
-# Date/Publication: 2017-11-02 00:57:51 UTC
+# Date/Publication: 2018-05-25 21:39:49 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
