--- a/r-tfruns-feedstock/recipe/meta.yaml
+++ b/r-tfruns-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1' %}
+{% set version = '1.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: tfruns_1.1.tar.gz  # [linux or win32]
+  fn: tfruns_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/tfruns_1.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/tfruns/tfruns_1.1.tar.gz  # [linux or win32]
-  sha256: f3252a5c3d0aaeeec8388a4000295571e51f355d369d7528692d0ee4f5630850  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/tfruns_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/tfruns/tfruns_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 962aadf373802a4ef1f9a38c25dfa4f6d8bbedf656d0de589953572dc71c2b0a  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/tfruns_1.3.zip  # [win64]
+  sha256: 29e4f34452d3d31bdf58103ff8155a005baecd643cd3cba48359606b8b8201d6  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/tfruns_1.1.zip  # [win64]
-  sha256: 211cd0c587cbc72c4e9ee9f39aafb686cc8863dcc5eb2fe9e274b01bceb007dc  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/tfruns_1.1.tgz  # [osx]
-  sha256: 41c3cb90479c32a738466843e56d6e46f62446d91878edc52fdaf07896ba4b60  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/tfruns_1.3.tgz  # [osx]
+  sha256: 660fbc95c3ee71411a15fb406a125939390d534d59caf8c9097ad206535ddac4  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -48,7 +43,6 @@ requirements:
     - r-reticulate
     - r-rlang
     - r-rstudioapi >=0.7
-    - r-tibble
     - r-tidyselect
     - r-whisker
     - r-yaml
@@ -62,7 +56,6 @@ requirements:
     - r-reticulate
     - r-rlang
     - r-rstudioapi >=0.7
-    - r-tibble
     - r-tidyselect
     - r-whisker
     - r-yaml
@@ -97,25 +90,25 @@ extra:
 # Package: tfruns
 # Type: Package
 # Title: Training Run Tools for 'TensorFlow'
-# Version: 1.1
+# Version: 1.3
 # Authors@R: c( person("JJ", "Allaire", role = c("aut", "cre"), email = "jj@rstudio.com"), person(family = "RStudio", role = c("cph", "fnd")), person("Mike", "Bostock", role = c("cph"), comment = "D3 library - https://d3js.org/"), person("Masayuki", "Tanaka", role = c("cph"), comment = "C3 library - http://c3js.org/"), person(family = "jQuery Foundation", role = "cph", comment = "jQuery library"), person(family = "jQuery contributors", role = c("cph"), comment = "jQuery library; authors: inst/views/components/jquery-AUTHORS.txt"), person("Shaun", "Bowe", role = c("cph"), comment= "jQuery visibilityChanged plugin"), person(family = "Materialize", role = c("cph"), comment = "Materizlize library - https://materializecss.com/"), person("Yuxi", "You", role = c("cph"), comment = "Vue.js library - https://vuejs.org/"), person("Kevin", "Decker", role = c("cph"), comment = "jsdiff library - https://github.com/kpdecker/jsdiff/"), person("Rodrigo", "Fernandes", role = c("cph"), comment = "diff2html library - https://diff2html.xyz/"), person("Ivan", "Sagalaev", role = c("cph"), comment = "highlight.js library - https://highlightjs.org/"), person("Yauheni", "Pakala", role = c("cph"), comment = "highlightjs-line-numbers library") )
 # Description: Create and manage unique directories for each 'TensorFlow'  training run. Provides a unique, time stamped directory for each run along with functions to retrieve the directory of the latest run or  latest several runs.
 # License: Apache License 2.0
 # URL: https://github.com/rstudio/tfruns
 # BugReports: https://github.com/rstudio/tfruns/issues
 # Depends: R (>= 3.1)
-# Imports: utils, jsonlite (>= 1.2), base64enc, yaml, config, magrittr, tibble, whisker, tidyselect, rlang, rstudioapi (>= 0.7), reticulate
+# Imports: utils, jsonlite (>= 1.2), base64enc, yaml, config, magrittr, whisker, tidyselect, rlang, rstudioapi (>= 0.7), reticulate
 # Suggests: testthat, knitr
 # Encoding: UTF-8
 # LazyData: true
 # RoxygenNote: 6.0.1
 # VignetteBuilder: knitr
 # NeedsCompilation: no
-# Packaged: 2017-12-17 03:22:35 UTC; jjallaire
+# Packaged: 2018-02-18 18:45:38 UTC; jjallaire
 # Author: JJ Allaire [aut, cre], RStudio [cph, fnd], Mike Bostock [cph] (D3 library - https://d3js.org/), Masayuki Tanaka [cph] (C3 library - http://c3js.org/), jQuery Foundation [cph] (jQuery library), jQuery contributors [cph] (jQuery library; authors: inst/views/components/jquery-AUTHORS.txt), Shaun Bowe [cph] (jQuery visibilityChanged plugin), Materialize [cph] (Materizlize library - https://materializecss.com/), Yuxi You [cph] (Vue.js library - https://vuejs.org/), Kevin Decker [cph] (jsdiff library - https://github.com/kpdecker/jsdiff/), Rodrigo Fernandes [cph] (diff2html library - https://diff2html.xyz/), Ivan Sagalaev [cph] (highlight.js library - https://highlightjs.org/), Yauheni Pakala [cph] (highlightjs-line-numbers library)
 # Maintainer: JJ Allaire <jj@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-12-17 06:52:55 UTC
+# Date/Publication: 2018-02-18 20:44:17 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
