--- a/r-utf8-feedstock/recipe/meta.yaml
+++ b/r-utf8-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.2' %}
+{% set version = '1.1.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,47 +8,42 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: utf8_1.1.2.tar.gz  # [linux or win32]
+  fn: utf8_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/utf8_1.1.2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/utf8/utf8_1.1.2.tar.gz  # [linux or win32]
-  sha256: 148517aadb75d82aba61f63afe2a30d254abebbdc7e32dd0830e12ff443915b9  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/utf8_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/utf8/utf8_{{ version }}.tar.gz  # [linux or win32]
+  sha256: f6da9cadfc683057d45f54b43312a359cf96ec2731c0dda18a8eae31d1e31e54  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/utf8_1.1.4.zip  # [win64]
+  sha256: fd18f3d01d1ee9b1419878861e62ce6e770cb8ed532d46e4130a250404dfc91b  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/utf8_1.1.2.zip  # [win64]
-  sha256: 9bc45d557b8cdacd3621fd115f6302017af89807e643c4ba46b988b2c3285a88  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/utf8_1.1.2.tgz  # [osx]
-  sha256: 19ea4e9c57a0220483d83bc83b707081abb004c82907ce92f603ce72435a55f8  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/utf8_1.1.4.tgz  # [osx]
+  sha256: c4139fdb54bf577fe78bc6b8af08f2564db47b1965359f43084da855b9ff3b34  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: corpus, knitr, testthat
+# Suggests: knitr, rmarkdown, testthat
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -65,8 +60,8 @@ test:
 about:
   home: https://github.com/patperry/r-utf8
   license: Apache License (== 2.0) | file LICENSE
-  summary: Processing and printing 'UTF-8' encoded international text (Unicode). Functions to
-    input, validate, normalize, encode, format, and display.
+  summary: Process and print 'UTF-8' encoded international text (Unicode). Input, validate, normalize,
+    encode, format, and display.
   license_family: APACHE
 
 extra:
@@ -76,24 +71,24 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: utf8
-# Version: 1.1.2
+# Version: 1.1.4
 # Title: Unicode Text Processing
-# Authors@R: c( person(c("Patrick", "O."), "Perry", role = c("aut", "cph", "cre"), email = "pperry@stern.nyu.edu"), person("Unicode, Inc.", role = c("cph", "dtc"), comment = "Unicode Character Database"))
+# Authors@R: c( person(c("Patrick", "O."), "Perry", role = c("aut", "cph", "cre"), email = "patperry@gmail.com"), person("Unicode, Inc.", role = c("cph", "dtc"), comment = "Unicode Character Database"))
 # Depends: R (>= 2.10)
-# Suggests: corpus, knitr, testthat
-# Description: Processing and printing 'UTF-8' encoded international text (Unicode). Functions to input, validate, normalize, encode, format, and display.
+# Suggests: knitr, rmarkdown, testthat
+# Description: Process and print 'UTF-8' encoded international text (Unicode). Input, validate, normalize, encode, format, and display.
 # License: Apache License (== 2.0) | file LICENSE
 # URL: https://github.com/patperry/r-utf8
 # BugReports: https://github.com/patperry/r-utf8/issues
 # LazyData: Yes
 # Encoding: UTF-8
-# VignetteBuilder: knitr
+# VignetteBuilder: knitr, rmarkdown
 # NeedsCompilation: yes
-# Packaged: 2017-12-13 22:37:54 UTC; ptrck
+# Packaged: 2018-05-24 15:00:57 UTC; ptrck
 # Author: Patrick O. Perry [aut, cph, cre], Unicode, Inc. [cph, dtc] (Unicode Character Database)
-# Maintainer: Patrick O. Perry <pperry@stern.nyu.edu>
+# Maintainer: Patrick O. Perry <patperry@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-12-14 16:27:32 UTC
+# Date/Publication: 2018-05-24 17:09:15 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
